--- a/Installer_Src/Setup DreamWorld/My Project/Resources.fi.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.fi.resx
@@ -144,8 +144,8 @@
   <data name="AllNone_word" xml:space="preserve">
     <value>Kaikki mukaan / pois</value>
   </data>
-  <data name="Allow200" xml:space="preserve">
-    <value>Salli 200+ Level jumalat</value>
+  <data name="AllowGodsTooltip" xml:space="preserve">
+    <value>Jos tämä kohta on valittuna Asetukset-&gt; Käyttöoikeudet kuka tahansa käyttäjä, jolla on taso&gt; = 100 Web-paneelissa voi tulla Jumalan, missä tahansa. Tämä voidaan asettaa yksittäisten alueiden jos oletuksena käyttöoikeudet on YK-merkitty ja ohitat sen alueella paneeli ** Jätä Gods tähän alueeseen **. Tällä asetuksella ei ole mitään tekemistä sen kanssa kaksi muuta asetuksia.</value>
   </data>
   <data name="Allow_cloud" xml:space="preserve">
     <value>Kuvan alkuperäinen Second Life pilviä</value>
@@ -160,7 +160,7 @@
     <value>Esineet voidaan ottaa irti verkkoon kautta Hypergrid</value>
   </data>
   <data name="Allow_Or_Disallow_Gods_word" xml:space="preserve">
-    <value>Sallia tai estää Gods</value>
+    <value>Salli Level-pohjainen jumalat</value>
   </data>
   <data name="Allow_Region_Owner_Gods_word" xml:space="preserve">
     <value>Salli alueen omistaja jumalat</value>
@@ -384,14 +384,14 @@
   <data name="Cancel_word" xml:space="preserve">
     <value>Peruuttaa</value>
   </data>
-  <data name="Cannot locate folder_word" xml:space="preserve">
-    <value>Ei löydy kansiota</value>
-  </data>
   <data name="Cannot_find_region_word" xml:space="preserve">
     <value>Ei löydä alue</value>
   </data>
   <data name="Cannot_locate" xml:space="preserve">
     <value>Ei löydy oletustervehdystekstin alue</value>
+  </data>
+  <data name="Cannot_locate_folder_word" xml:space="preserve">
+    <value>Ei löydy kansiota</value>
   </data>
   <data name="Cannot_Normalize" xml:space="preserve">
     <value>Voi Normalisointipainike kartta alueena tulee olemaan paikassa alle 0</value>
@@ -401,6 +401,9 @@
   </data>
   <data name="Cannot_save_region_word" xml:space="preserve">
     <value>Tallennus ei onnistu alueella:</value>
+  </data>
+  <data name="Category_word" xml:space="preserve">
+    <value>Kategoria</value>
   </data>
   <data name="CenterMap" xml:space="preserve">
     <value>Kartan keskelle koordinoida</value>
@@ -449,6 +452,9 @@
   </data>
   <data name="Choose_Cache" xml:space="preserve">
     <value>Valita, mitä välimuistin tyhjentää</value>
+  </data>
+  <data name="Choose_folder_for_backups" xml:space="preserve">
+    <value>Valitse kansio tallentaa varmuuskopioita</value>
   </data>
   <data name="Choose_Region_word" xml:space="preserve">
     <value>Valitse alue</value>
@@ -564,6 +570,9 @@
   <data name="Click_to_load" xml:space="preserve">
     <value>Klikkaa ladata tämän sisällön</value>
   </data>
+  <data name="Click_To_Load_Here" xml:space="preserve">
+    <value>Klikkaa ladata vasempaan alakulmaan tiedoston tähän paikkaan.</value>
+  </data>
   <data name="Click_to_Request_Voice_Service" xml:space="preserve">
     <value>Klikkaa pyytää Voice -palveluun</value>
   </data>
@@ -604,7 +613,7 @@
     <value>yhteyshenkilön nimi</value>
   </data>
   <data name="Content_word" xml:space="preserve">
-    <value>pitoisuus</value>
+    <value>Sisältö</value>
   </data>
   <data name="Coordx" xml:space="preserve">
     <value>Itä-länsi asema maailmankartalla</value>
@@ -634,7 +643,7 @@
     <value>Nykyinen Koko levyllä</value>
   </data>
   <data name="Custom_word" xml:space="preserve">
-    <value>asiakassuhde</value>
+    <value>Mukautettu</value>
   </data>
   <data name="Cycle_Time_in_seconds" xml:space="preserve">
     <value>Cycle Aika sekunneissa</value>
@@ -702,6 +711,9 @@
   <data name="Deregister_word" xml:space="preserve">
     <value>rekisteröinnin poistamista koskeva</value>
   </data>
+  <data name="Description_word" xml:space="preserve">
+    <value>Kuvaus</value>
+  </data>
   <data name="Details_word" xml:space="preserve">
     <value>Yksityiskohdat</value>
   </data>
@@ -756,6 +768,9 @@
   <data name="DNS_HG_Name" xml:space="preserve">
     <value>DNS nimi &amp; Hypergrid</value>
   </data>
+  <data name="DosBoxRunning" xml:space="preserve">
+    <value>DOS-nimeltään Kestävä on jo käynnissä</value>
+  </data>
   <data name="DOS_Box_word" xml:space="preserve">
     <value>DOS Box</value>
   </data>
@@ -772,9 +787,12 @@
     <value>DreamGrid</value>
   </data>
   <data name="Dynamic_DNS_word" xml:space="preserve">
-    <value>Dynaaminen DNSRegistering DynDNS osoite</value>
+    <value>dynaaminen DNS</value>
   </data>
   <data name="DynDNS" xml:space="preserve">
+    <value>Rekisteröityminen DynDNS osoite</value>
+  </data>
+  <data name="DynDNS_password_word" xml:space="preserve">
     <value>DynDNS salasana</value>
   </data>
   <data name="EditRegion" xml:space="preserve">
@@ -823,7 +841,7 @@
     <value>Anna objektin nimi ( '/' varmuuskopioi kaiken, ja '/ Objects / laatikko' varmuuskopioi laatikkomaisen kansiossa Esineet</value>
   </data>
   <data name="ErrInstall" xml:space="preserve">
-    <value>Error: ei voitu käynnistää DreamGridInstaller.exe.</value>
+    <value>Virhe: ei voitu käynnistää DreamGridInstaller.exe.</value>
   </data>
   <data name="ErrorLevel0" xml:space="preserve">
     <value>0 - (Virhe) Vain virheet</value>
@@ -1033,7 +1051,10 @@
     <value>Hypergrid pitäisi toimia.</value>
   </data>
   <data name="Hide" xml:space="preserve">
-    <value>Piilottaa</value>
+    <value>Piilota Alueet kun olet valmis</value>
+  </data>
+  <data name="Hide_Allways_word" xml:space="preserve">
+    <value>Aina Piilota Alueet</value>
   </data>
   <data name="Highest_Used" xml:space="preserve">
     <value>Korkein käytetty: 8004</value>
@@ -1197,9 +1218,6 @@
   <data name="ListAvatars" xml:space="preserve">
     <value>Katso luettelo hahmot</value>
   </data>
-  <data name="Load Parcel" xml:space="preserve">
-    <value>Load Parcel</value>
-  </data>
   <data name="Loading_Settings" xml:space="preserve">
     <value>Ladataan Settings.ini</value>
   </data>
@@ -1212,6 +1230,12 @@
   <data name="Load_Free_Avatar_Inventory_text" xml:space="preserve">
     <value>Kuormitus infuusioreaktiot päässä Outworldz kotisivuilta</value>
   </data>
+  <data name="Load_Free_Avatar_Inventory_word" xml:space="preserve">
+    <value>Kuormitus Vapaa Avatar Inventory (www)</value>
+  </data>
+  <data name="Load_Free_DreamGrid_OARs_word" xml:space="preserve">
+    <value>Ladata ilmaiseksi DreamGrid Airot (www)</value>
+  </data>
   <data name="Load_Free_Dreamworld_OARs" xml:space="preserve">
     <value>Ladata ilmaiseksi Dreamworld Airot</value>
   </data>
@@ -1221,8 +1245,17 @@
   <data name="Load_Local_IARs" xml:space="preserve">
     <value>Load Paikallinen infuusioreaktiot päässä IAR kansiosta</value>
   </data>
+  <data name="Load_Local_IARs_word" xml:space="preserve">
+    <value>Load Paikallinen infuusioreaktiot</value>
+  </data>
   <data name="Load_Local_OARs" xml:space="preserve">
     <value>Load Paikallinen airot päässä OAR kansiosta</value>
+  </data>
+  <data name="Load_Local_OARs_word" xml:space="preserve">
+    <value>Load Paikallinen Airot</value>
+  </data>
+  <data name="Load_Parcel" xml:space="preserve">
+    <value>Load Parcel</value>
   </data>
   <data name="Load_Region_OAR" xml:space="preserve">
     <value>Load Region OAR</value>
@@ -1263,7 +1296,7 @@
   <data name="Make_a_backup_word" xml:space="preserve">
     <value>Tehdä varmuuskopio?</value>
   </data>
-  <data name="Manager God_word" xml:space="preserve">
+  <data name="Manager_God_word" xml:space="preserve">
     <value>Manager_God</value>
   </data>
   <data name="Maps_Erased" xml:space="preserve">
@@ -1330,7 +1363,7 @@
     <value>Hypergrid.org Region Server</value>
   </data>
   <data name="Minutes" xml:space="preserve">
-    <value>Minuutit</value>
+    <value>Pöytäkirja</value>
   </data>
   <data name="Mode" xml:space="preserve">
     <value>tila</value>
@@ -1340,6 +1373,9 @@
   </data>
   <data name="More_Free_Islands" xml:space="preserve">
     <value>Lisää Ilmainen saaret ja osat</value>
+  </data>
+  <data name="More_Free_Islands_and_Parts_word" xml:space="preserve">
+    <value>Lisää Ilmainen saaret ja osat (www)</value>
   </data>
   <data name="More_Help" xml:space="preserve">
     <value>Klikkaa lisäohjeita verkkosivustolla</value>
@@ -1384,7 +1420,10 @@
     <value>Nimi</value>
   </data>
   <data name="NameAlreadySet" xml:space="preserve">
-    <value>Oman järjestelmän nimi on valittu {newname}. Voit vaihtaa nimen DNS valikkoon milloin tahansa</value>
+    <value>Järjestelmän Hypergrid nimi on nollattu. Voit muuttaa nimeä Setup-Asetukset-&gt; DNS-valikossa</value>
+  </data>
+  <data name="Name_of_Region_Word" xml:space="preserve">
+    <value>Nimi Alueen</value>
   </data>
   <data name="Neighbor_Distance" xml:space="preserve">
     <value>Naapuri Etäisyys (oletus = 25,0)</value>
@@ -1494,7 +1533,13 @@
   <data name="OAR_Load_and_Save" xml:space="preserve">
     <value>OAR Lataa ja tallenna</value>
   </data>
+  <data name="OAR_load_save_backupp_word" xml:space="preserve">
+    <value>OAR Load, Save ja varmuuskopiointi</value>
+  </data>
   <data name="Object_Path" xml:space="preserve">
+    <value>Objektin polku ja nimi</value>
+  </data>
+  <data name="Object_Path_and_name" xml:space="preserve">
     <value>Objektin polku ja nimi</value>
   </data>
   <data name="ODE_text" xml:space="preserve">
@@ -1504,7 +1549,7 @@
     <value>OODI</value>
   </data>
   <data name="Off" xml:space="preserve">
-    <value>Pois päältä</value>
+    <value>Vinossa</value>
   </data>
   <data name="Offline" xml:space="preserve">
     <value>Poissa</value>
@@ -1548,11 +1593,11 @@
   <data name="Passed_LAN" xml:space="preserve">
     <value>Läpäissyt LAN silmukkatesti</value>
   </data>
-  <data name="Password" xml:space="preserve">
-    <value>Salasana</value>
-  </data>
   <data name="Password_Text" xml:space="preserve">
     <value>Voit vaihtaa salasanan, kun Opensim on käynnissä</value>
+  </data>
+  <data name="Password_word" xml:space="preserve">
+    <value>Salasana</value>
   </data>
   <data name="PDF_Manual_word" xml:space="preserve">
     <value>PDF Manual</value>
@@ -1562,6 +1607,9 @@
   </data>
   <data name="Permissions_word" xml:space="preserve">
     <value>käyttöoikeudet</value>
+  </data>
+  <data name="Photo_Word" xml:space="preserve">
+    <value>Kuva</value>
   </data>
   <data name="Physical_Prim" xml:space="preserve">
     <value>Fyysinen Prim Max Mitat</value>
@@ -1698,6 +1746,9 @@
   <data name="Region_Database" xml:space="preserve">
     <value>alue Database</value>
   </data>
+  <data name="Region_full_msg" xml:space="preserve">
+    <value>Maksimi määrä hahmot + NPC</value>
+  </data>
   <data name="Region_List" xml:space="preserve">
     <value>alue List</value>
   </data>
@@ -1731,6 +1782,9 @@
   <data name="Region_Port_word" xml:space="preserve">
     <value>alue Port</value>
   </data>
+  <data name="Region_Removed" xml:space="preserve">
+    <value>Alue on poistettu</value>
+  </data>
   <data name="Region_ServerName" xml:space="preserve">
     <value>Palvelin yhteyden. 'Localhost' on oletusarvo.</value>
   </data>
@@ -1745,9 +1799,6 @@
   </data>
   <data name="Region_UUID_Is_invalid_word" xml:space="preserve">
     <value>Alue UUID Is kelpaa</value>
-  </data>
-  <data name="Reion_Removed" xml:space="preserve">
-    <value>Alue on poistettu</value>
   </data>
   <data name="Reload" xml:space="preserve">
     <value>Päivitä ruudukko</value>
@@ -1794,14 +1845,17 @@
   <data name="Restart_on_Physics_Crash_Text" xml:space="preserve">
     <value>Bulletsim fysiikka Crash pakottaa simulaattori uudelleenkäynnistyksen</value>
   </data>
+  <data name="Restart_Pending_word" xml:space="preserve">
+    <value>uudelleenkäynnistys odottaa</value>
+  </data>
   <data name="Restart_Periodically_Minutes" xml:space="preserve">
     <value>Alueet kaikki automaattisen uudelleenkäynnistyksen jälkeen niin monta minuuttia käynnissä</value>
   </data>
   <data name="Restart_Periodically_word" xml:space="preserve">
     <value>uudelleenkäynnistys määräajoin</value>
   </data>
-  <data name="Restart_Queued_for_word" xml:space="preserve">
-    <value>Uudelleenkäynnistys jonossa</value>
+  <data name="Restart_Queued_word" xml:space="preserve">
+    <value>uudelleenkäynnistys Jonossa</value>
   </data>
   <data name="Restart_Region_word" xml:space="preserve">
     <value>uudelleenkäynnistys Region</value>
@@ -1833,6 +1887,9 @@
   <data name="Robust_failed_to_start" xml:space="preserve">
     <value>Tukeva ei käynnistynyt</value>
   </data>
+  <data name="Robust_not_Running" xml:space="preserve">
+    <value>Tukeva ei ole käynnissä tällä koneella</value>
+  </data>
   <data name="Robust_running" xml:space="preserve">
     <value>Tukeva on käynnissä</value>
   </data>
@@ -1844,6 +1901,9 @@
   </data>
   <data name="Running" xml:space="preserve">
     <value>Running</value>
+  </data>
+  <data name="Running_as_a_Region_Server_word" xml:space="preserve">
+    <value>Running alueena Server</value>
   </data>
   <data name="Running_Network" xml:space="preserve">
     <value>Running Verkkodiagnostiikka</value>
@@ -1908,6 +1968,9 @@
   <data name="Search_All_Grids_word" xml:space="preserve">
     <value>Haku Kaikki Ristikot</value>
   </data>
+  <data name="Search_Connect_failed" xml:space="preserve">
+    <value>Yhdistäminen epäonnistui search</value>
+  </data>
   <data name="Search_word" xml:space="preserve">
     <value>Hae</value>
   </data>
@@ -1919,6 +1982,9 @@
   </data>
   <data name="See_Log" xml:space="preserve">
     <value>Haluatko nähdä lokitiedoston?</value>
+  </data>
+  <data name="See_Ports_In_Use_word" xml:space="preserve">
+    <value>Katso Ports Käytössä</value>
   </data>
   <data name="Selectallnone" xml:space="preserve">
     <value>Valitsee kaikki tai ei mitään ruudusta</value>
@@ -1971,6 +2037,9 @@
   <data name="Setup_Voice_Service" xml:space="preserve">
     <value>Setup Voice -palveluun</value>
   </data>
+  <data name="Setup_word" xml:space="preserve">
+    <value>Perustaa</value>
+  </data>
   <data name="Set_Debug_Level_word" xml:space="preserve">
     <value>Set Debug Level</value>
   </data>
@@ -1993,7 +2062,7 @@
     <value>Näytä Käyttäjän tiedot</value>
   </data>
   <data name="Show_word" xml:space="preserve">
-    <value>Show</value>
+    <value>Aina Show Alueet</value>
   </data>
   <data name="Shutdown_word" xml:space="preserve">
     <value>Sammuttaa</value>
@@ -2089,7 +2158,7 @@
     <value>alkaa</value>
   </data>
   <data name="Status_word" xml:space="preserve">
-    <value>Status</value>
+    <value>Tila</value>
   </data>
   <data name="STComment" xml:space="preserve">
     <value>Script ajastimen nopeusasetus. 1/11 Toinen on oletusarvo (0,0909)</value>
@@ -2122,7 +2191,7 @@
     <value>Pysäytä kaikki</value>
   </data>
   <data name="Stop_word" xml:space="preserve">
-    <value>Stop</value>
+    <value>Lopettaa</value>
   </data>
   <data name="Suitcase_enable" xml:space="preserve">
     <value>Ota Inventory Matkalaukku</value>
@@ -2310,6 +2379,9 @@
   <data name="Voice_Settings_Word" xml:space="preserve">
     <value>Puheasetukset</value>
   </data>
+  <data name="Waiting_on_Robust" xml:space="preserve">
+    <value>Odotetaan Kestävä aloittaa</value>
+  </data>
   <data name="Waiting_text" xml:space="preserve">
     <value>Odotetaan kaikille alueille mahdollisuus poistua</value>
   </data>
@@ -2321,6 +2393,9 @@
   </data>
   <data name="WebServerPanel" xml:space="preserve">
     <value>Web Server Panel</value>
+  </data>
+  <data name="Web_Download_Link_Word" xml:space="preserve">
+    <value>Internet Download Link</value>
   </data>
   <data name="Web_Port" xml:space="preserve">
     <value>Web-portti (80 tai 8000)</value>
@@ -2351,5 +2426,14 @@
   </data>
   <data name="Wrong" xml:space="preserve">
     <value>Jotain on vialla Internetissä</value>
+  </data>
+  <data name="XEngine_word" xml:space="preserve">
+    <value>XEngine</value>
+  </data>
+  <data name="YEngine_word" xml:space="preserve">
+    <value>YEngine</value>
+  </data>
+  <data name="Yes_word" xml:space="preserve">
+    <value>Joo</value>
   </data>
 </root>
