--- a/Installer_Src/Setup DreamWorld/My Project/Resources.fr.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.fr.resx
@@ -133,7 +133,7 @@
     <value>Ajouter</value>
   </data>
   <data name="Admin_Password_word" xml:space="preserve">
-    <value>Mot De Passe Administrateur</value>
+    <value>Mot De Passe D'Administrateur</value>
   </data>
   <data name="Admin_Web_Page_word" xml:space="preserve">
     <value>Administrateur Page Web</value>
@@ -144,8 +144,8 @@
   <data name="AllNone_word" xml:space="preserve">
     <value>Tous / Aucun</value>
   </data>
-  <data name="Allow200" xml:space="preserve">
-    <value>Autoriser les dieux 200+ niveau</value>
+  <data name="AllowGodsTooltip" xml:space="preserve">
+    <value>Si cette case est cochée dans Configuration-&gt; Autorisations, puis tout utilisateur ayant un niveau&gt; = 100 dans le panneau Web peut devenir un Dieu, partout. Cela peut être ensemble pour les régions individuelles si la valeur par défaut dans les autorisations est décochée, et vous remplacer dans le panneau de région ** Permettre Dieux dans cette région **. Ce paramètre n'a rien à voir avec les deux autres paramètres.</value>
   </data>
   <data name="Allow_cloud" xml:space="preserve">
     <value>Les nuages ​​d'origine Second Life</value>
@@ -157,10 +157,10 @@
     <value>Laisser LSL à contacter le serveur</value>
   </data>
   <data name="Allow_objects" xml:space="preserve">
-    <value>Les objets peuvent être prises à partir de votre réseau via Hypergrid</value>
+    <value>Les objets peuvent être pris de votre réseau via Hypergrid</value>
   </data>
   <data name="Allow_Or_Disallow_Gods_word" xml:space="preserve">
-    <value>Autoriser ou non Gods</value>
+    <value>Autoriser les dieux basés niveau</value>
   </data>
   <data name="Allow_Region_Owner_Gods_word" xml:space="preserve">
     <value>Autoriser les dieux propriétaires Région</value>
@@ -384,14 +384,14 @@
   <data name="Cancel_word" xml:space="preserve">
     <value>Annuler</value>
   </data>
-  <data name="Cannot locate folder_word" xml:space="preserve">
-    <value>Impossible de localiser le dossier</value>
-  </data>
   <data name="Cannot_find_region_word" xml:space="preserve">
     <value>Vous ne trouvez pas la région</value>
   </data>
   <data name="Cannot_locate" xml:space="preserve">
     <value>Impossible de localiser la région d'accueil par défaut</value>
+  </data>
+  <data name="Cannot_locate_folder_word" xml:space="preserve">
+    <value>Impossible de localiser le dossier</value>
   </data>
   <data name="Cannot_Normalize" xml:space="preserve">
     <value>Impossible de mapper Normaliser comme une région sera à un endroit moins de 0</value>
@@ -402,11 +402,14 @@
   <data name="Cannot_save_region_word" xml:space="preserve">
     <value>Impossible d'enregistrer la région:</value>
   </data>
+  <data name="Category_word" xml:space="preserve">
+    <value>Catégorie</value>
+  </data>
   <data name="CenterMap" xml:space="preserve">
     <value>Centre de la carte de coordonnées</value>
   </data>
   <data name="Changes_Made" xml:space="preserve">
-    <value>Des modifications ont été apportées. Sauver?</value>
+    <value>Des modifications ont été apportées. Sauvegarder?</value>
   </data>
   <data name="Change_Password_word" xml:space="preserve">
     <value>Changer le mot de passe</value>
@@ -449,6 +452,9 @@
   </data>
   <data name="Choose_Cache" xml:space="preserve">
     <value>Choisissez le cache à vide</value>
+  </data>
+  <data name="Choose_folder_for_backups" xml:space="preserve">
+    <value>Choisissez un dossier pour les sauvegardes de magasin</value>
   </data>
   <data name="Choose_Region_word" xml:space="preserve">
     <value>Choisissez la région</value>
@@ -563,6 +569,9 @@
   </data>
   <data name="Click_to_load" xml:space="preserve">
     <value>Cliquez pour charger ce contenu</value>
+  </data>
+  <data name="Click_To_Load_Here" xml:space="preserve">
+    <value>Cliquez pour charger le coin inférieur gauche du fichier dans cet emplacement.</value>
   </data>
   <data name="Click_to_Request_Voice_Service" xml:space="preserve">
     <value>Cliquez ici pour demander le service vocal</value>
@@ -702,6 +711,9 @@
   <data name="Deregister_word" xml:space="preserve">
     <value>deregister</value>
   </data>
+  <data name="Description_word" xml:space="preserve">
+    <value>La description</value>
+  </data>
   <data name="Details_word" xml:space="preserve">
     <value>Détails</value>
   </data>
@@ -756,6 +768,9 @@
   <data name="DNS_HG_Name" xml:space="preserve">
     <value>Nom DNS &amp; Hypergrid</value>
   </data>
+  <data name="DosBoxRunning" xml:space="preserve">
+    <value>Une fenêtre DOS nommé robuste est en cours d'exécution</value>
+  </data>
   <data name="DOS_Box_word" xml:space="preserve">
     <value>DOS Box</value>
   </data>
@@ -772,16 +787,19 @@
     <value>DreamGrid</value>
   </data>
   <data name="Dynamic_DNS_word" xml:space="preserve">
-    <value>Adresse dynamique DNSRegistering DynDNS</value>
+    <value>DNS dynamique</value>
   </data>
   <data name="DynDNS" xml:space="preserve">
+    <value>DynDNS adresse Enregistrement</value>
+  </data>
+  <data name="DynDNS_password_word" xml:space="preserve">
     <value>Mot de passe DynDNS</value>
   </data>
   <data name="EditRegion" xml:space="preserve">
     <value>Modifier la région</value>
   </data>
   <data name="Edit_word" xml:space="preserve">
-    <value>modifier</value>
+    <value>Éditer</value>
   </data>
   <data name="EMGod" xml:space="preserve">
     <value>Directeur Estate est Dieu - les gestionnaires immobiliers peuvent devenir des dieux, mais seulement pour ce domaine</value>
@@ -1033,7 +1051,10 @@
     <value>Hypergrid devrait fonctionner.</value>
   </data>
   <data name="Hide" xml:space="preserve">
-    <value>Cacher</value>
+    <value>Régions Masquer Lorsque vous avez terminé</value>
+  </data>
+  <data name="Hide_Allways_word" xml:space="preserve">
+    <value>Toujours régions Masquer</value>
   </data>
   <data name="Highest_Used" xml:space="preserve">
     <value>Le plus utilisé: 8004</value>
@@ -1108,7 +1129,7 @@
     <value>À partir Icecast</value>
   </data>
   <data name="Icons" xml:space="preserve">
-    <value>icônes</value>
+    <value>Icônes</value>
   </data>
   <data name="If_Enabled_Save_Oars" xml:space="preserve">
     <value>Opensim sauvera AVIRONS après l'exécution de cette longue</value>
@@ -1183,7 +1204,7 @@
     <value>Gardez pendant des jours</value>
   </data>
   <data name="Language" xml:space="preserve">
-    <value>La langue</value>
+    <value>Langue</value>
   </data>
   <data name="LAN_IP" xml:space="preserve">
     <value>Vous utilisez un réseau local IP. Ce test est sautée.</value>
@@ -1197,9 +1218,6 @@
   <data name="ListAvatars" xml:space="preserve">
     <value>Voir la liste des Avatars</value>
   </data>
-  <data name="Load Parcel" xml:space="preserve">
-    <value>Chargez colis</value>
-  </data>
   <data name="Loading_Settings" xml:space="preserve">
     <value>Chargement Settings.ini</value>
   </data>
@@ -1212,6 +1230,12 @@
   <data name="Load_Free_Avatar_Inventory_text" xml:space="preserve">
     <value>IARS de charge à partir du site Web Outworldz</value>
   </data>
+  <data name="Load_Free_Avatar_Inventory_word" xml:space="preserve">
+    <value>Charge libre Avatar inventaire (www)</value>
+  </data>
+  <data name="Load_Free_DreamGrid_OARs_word" xml:space="preserve">
+    <value>Gratuit charger DreamGrid OARs (www)</value>
+  </data>
   <data name="Load_Free_Dreamworld_OARs" xml:space="preserve">
     <value>Charger gratuit Dreamworld OARs</value>
   </data>
@@ -1221,8 +1245,17 @@
   <data name="Load_Local_IARs" xml:space="preserve">
     <value>Chargez IAR locaux à partir du dossier IAR</value>
   </data>
+  <data name="Load_Local_IARs_word" xml:space="preserve">
+    <value>Chargez IAR locaux</value>
+  </data>
   <data name="Load_Local_OARs" xml:space="preserve">
     <value>Chargez OARs locaux à partir du dossier OAR</value>
+  </data>
+  <data name="Load_Local_OARs_word" xml:space="preserve">
+    <value>Chargez OARs locaux</value>
+  </data>
+  <data name="Load_Parcel" xml:space="preserve">
+    <value>Chargez colis</value>
   </data>
   <data name="Load_Region_OAR" xml:space="preserve">
     <value>Région charge OAR</value>
@@ -1263,7 +1296,7 @@
   <data name="Make_a_backup_word" xml:space="preserve">
     <value>Faites une sauvegarde?</value>
   </data>
-  <data name="Manager God_word" xml:space="preserve">
+  <data name="Manager_God_word" xml:space="preserve">
     <value>Manager_God</value>
   </data>
   <data name="Maps_Erased" xml:space="preserve">
@@ -1341,6 +1374,9 @@
   <data name="More_Free_Islands" xml:space="preserve">
     <value>Plus Îles gratuites et pièces</value>
   </data>
+  <data name="More_Free_Islands_and_Parts_word" xml:space="preserve">
+    <value>Plus Îles gratuites et pièces (www)</value>
+  </data>
   <data name="More_Help" xml:space="preserve">
     <value>Cliquez pour plus d'aide sur le site</value>
   </data>
@@ -1381,10 +1417,13 @@
     <value>MySQL est en cours d'exécution quand je commencé, donc je quitte MySQL.</value>
   </data>
   <data name="Name" xml:space="preserve">
-    <value>prénom</value>
+    <value>Nom</value>
   </data>
   <data name="NameAlreadySet" xml:space="preserve">
-    <value>Votre nom du système a été défini sur {} nouveaunom. Vous pouvez modifier le nom dans le menu DNS à tout moment</value>
+    <value>Votre nom système Hypergrid a été remis à zéro. Vous pouvez modifier le nom dans le menu Configuration-Paramètres-&gt; menu DNS</value>
+  </data>
+  <data name="Name_of_Region_Word" xml:space="preserve">
+    <value>Nom de la région</value>
   </data>
   <data name="Neighbor_Distance" xml:space="preserve">
     <value>Distance Neighbor (valeur par défaut = 25,0)</value>
@@ -1494,7 +1533,13 @@
   <data name="OAR_Load_and_Save" xml:space="preserve">
     <value>OAR Charger et Enregistrer</value>
   </data>
+  <data name="OAR_load_save_backupp_word" xml:space="preserve">
+    <value>OAR Charger, Enregistrer et sauvegarde</value>
+  </data>
   <data name="Object_Path" xml:space="preserve">
+    <value>Chemin de l'objet et le nom</value>
+  </data>
+  <data name="Object_Path_and_name" xml:space="preserve">
     <value>Chemin de l'objet et le nom</value>
   </data>
   <data name="ODE_text" xml:space="preserve">
@@ -1548,11 +1593,11 @@
   <data name="Passed_LAN" xml:space="preserve">
     <value>LAN passé un test en boucle</value>
   </data>
-  <data name="Password" xml:space="preserve">
-    <value>Mot de passe</value>
-  </data>
   <data name="Password_Text" xml:space="preserve">
     <value>Vous ne pouvez changer le mot de passe lorsque Opensim est en marche</value>
+  </data>
+  <data name="Password_word" xml:space="preserve">
+    <value>Mot de passe</value>
   </data>
   <data name="PDF_Manual_word" xml:space="preserve">
     <value>Manuel PDF</value>
@@ -1562,6 +1607,9 @@
   </data>
   <data name="Permissions_word" xml:space="preserve">
     <value>autorisations</value>
+  </data>
+  <data name="Photo_Word" xml:space="preserve">
+    <value>Photo</value>
   </data>
   <data name="Physical_Prim" xml:space="preserve">
     <value>Prim physique Taille max</value>
@@ -1675,7 +1723,7 @@
     <value>régions sont encore en cours d'exécution</value>
   </data>
   <data name="Regions_word" xml:space="preserve">
-    <value>Les régions</value>
+    <value>Régions</value>
   </data>
   <data name="Region_Already_Exists" xml:space="preserve">
     <value>Région existe déjà</value>
@@ -1697,6 +1745,9 @@
   </data>
   <data name="Region_Database" xml:space="preserve">
     <value>Base de données de la région</value>
+  </data>
+  <data name="Region_full_msg" xml:space="preserve">
+    <value>Nombre maximum d'Avatars + PNJ</value>
   </data>
   <data name="Region_List" xml:space="preserve">
     <value>région Liste</value>
@@ -1731,6 +1782,9 @@
   <data name="Region_Port_word" xml:space="preserve">
     <value>région Port</value>
   </data>
+  <data name="Region_Removed" xml:space="preserve">
+    <value>Région a été supprimé</value>
+  </data>
   <data name="Region_ServerName" xml:space="preserve">
     <value>Le serveur se connecter. « Localhost » est la valeur par défaut.</value>
   </data>
@@ -1745,9 +1799,6 @@
   </data>
   <data name="Region_UUID_Is_invalid_word" xml:space="preserve">
     <value>Région UUID est invalide</value>
-  </data>
-  <data name="Reion_Removed" xml:space="preserve">
-    <value>Région a été supprimé</value>
   </data>
   <data name="Reload" xml:space="preserve">
     <value>Recharger la grille</value>
@@ -1794,14 +1845,17 @@
   <data name="Restart_on_Physics_Crash_Text" xml:space="preserve">
     <value>accident de la physique Bulletsim forcera un redémarrage du simulateur</value>
   </data>
+  <data name="Restart_Pending_word" xml:space="preserve">
+    <value>En attente de redémarrage</value>
+  </data>
   <data name="Restart_Periodically_Minutes" xml:space="preserve">
     <value>Les régions seront tous redémarrage automatique après tant de minutes en cours d'exécution</value>
   </data>
   <data name="Restart_Periodically_word" xml:space="preserve">
     <value>Redémarrez périodiquement</value>
   </data>
-  <data name="Restart_Queued_for_word" xml:space="preserve">
-    <value>Redémarrer file d'attente pour</value>
+  <data name="Restart_Queued_word" xml:space="preserve">
+    <value>Redémarrer Queued</value>
   </data>
   <data name="Restart_Region_word" xml:space="preserve">
     <value>Redémarrer Région</value>
@@ -1833,6 +1887,9 @@
   <data name="Robust_failed_to_start" xml:space="preserve">
     <value>Robuste n'a pas réussi à démarrer</value>
   </data>
+  <data name="Robust_not_Running" xml:space="preserve">
+    <value>Robuste ne fonctionne pas sur cette machine</value>
+  </data>
   <data name="Robust_running" xml:space="preserve">
     <value>Robuste est en cours d'exécution</value>
   </data>
@@ -1844,6 +1901,9 @@
   </data>
   <data name="Running" xml:space="preserve">
     <value>Fonctionnement</value>
+  </data>
+  <data name="Running_as_a_Region_Server_word" xml:space="preserve">
+    <value>Exécution en tant que serveur Région</value>
   </data>
   <data name="Running_Network" xml:space="preserve">
     <value>Diagnostics du réseau en cours d'exécution</value>
@@ -1873,7 +1933,7 @@
     <value>Enregistrer région OAR</value>
   </data>
   <data name="Save_word" xml:space="preserve">
-    <value>sauver</value>
+    <value>sauvegarder</value>
   </data>
   <data name="Saving_word" xml:space="preserve">
     <value>Économie</value>
@@ -1908,6 +1968,9 @@
   <data name="Search_All_Grids_word" xml:space="preserve">
     <value>Recherche Tous Grids</value>
   </data>
+  <data name="Search_Connect_failed" xml:space="preserve">
+    <value>Impossible de se connecter à la base de données Recherche</value>
+  </data>
   <data name="Search_word" xml:space="preserve">
     <value>Chercher</value>
   </data>
@@ -1919,6 +1982,9 @@
   </data>
   <data name="See_Log" xml:space="preserve">
     <value>Voulez-vous voir le fichier journal?</value>
+  </data>
+  <data name="See_Ports_In_Use_word" xml:space="preserve">
+    <value>Voir ports utilisés</value>
   </data>
   <data name="Selectallnone" xml:space="preserve">
     <value>Sélectionne tout ou rien des cases à cocher</value>
@@ -1945,7 +2011,7 @@
     <value>Type de serveur</value>
   </data>
   <data name="Settings_word" xml:space="preserve">
-    <value>Paramètres</value>
+    <value>Réglages</value>
   </data>
   <data name="Setting_Loopback" xml:space="preserve">
     <value>Adapter Configuration Bouclage à l'adresse IP publique</value>
@@ -1971,6 +2037,9 @@
   <data name="Setup_Voice_Service" xml:space="preserve">
     <value>Installation des services voix</value>
   </data>
+  <data name="Setup_word" xml:space="preserve">
+    <value>Installer</value>
+  </data>
   <data name="Set_Debug_Level_word" xml:space="preserve">
     <value>Définir le niveau de débogage</value>
   </data>
@@ -1993,7 +2062,7 @@
     <value>Afficher les détails de l'utilisateur</value>
   </data>
   <data name="Show_word" xml:space="preserve">
-    <value>Spectacle</value>
+    <value>Toujours Régions Voir</value>
   </data>
   <data name="Shutdown_word" xml:space="preserve">
     <value>Fermer</value>
@@ -2176,7 +2245,7 @@
     <value>Les pools de threads</value>
   </data>
   <data name="Tides_word" xml:space="preserve">
-    <value>Les marées</value>
+    <value>Marées</value>
   </data>
   <data name="Tide_Enable" xml:space="preserve">
     <value>Activer la marée entrer et sortir?</value>
@@ -2310,6 +2379,9 @@
   <data name="Voice_Settings_Word" xml:space="preserve">
     <value>Paramètres de la voix</value>
   </data>
+  <data name="Waiting_on_Robust" xml:space="preserve">
+    <value>En attendant le robuste pour démarrer</value>
+  </data>
   <data name="Waiting_text" xml:space="preserve">
     <value>En attente de toutes les régions de sortie</value>
   </data>
@@ -2321,6 +2393,9 @@
   </data>
   <data name="WebServerPanel" xml:space="preserve">
     <value>Panneau de serveur Web</value>
+  </data>
+  <data name="Web_Download_Link_Word" xml:space="preserve">
+    <value>Lien de téléchargement Web</value>
   </data>
   <data name="Web_Port" xml:space="preserve">
     <value>Port Web (80 ou 8000)</value>
@@ -2351,5 +2426,14 @@
   </data>
   <data name="Wrong" xml:space="preserve">
     <value>Quelque chose ne va pas avec l'Internet</value>
+  </data>
+  <data name="XEngine_word" xml:space="preserve">
+    <value>XEngine</value>
+  </data>
+  <data name="YEngine_word" xml:space="preserve">
+    <value>YEngine</value>
+  </data>
+  <data name="Yes_word" xml:space="preserve">
+    <value>Oui</value>
   </data>
 </root>
