--- a/Installer_Src/Setup DreamWorld/My Project/Resources.he.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.he.resx
@@ -144,8 +144,8 @@
   <data name="AllNone_word" xml:space="preserve">
     <value>הכל / אף אחד</value>
   </data>
-  <data name="Allow200" xml:space="preserve">
-    <value>אפשר אלי רמת 200+</value>
+  <data name="AllowGodsTooltip" xml:space="preserve">
+    <value>אם תיבה זו מסומנת ב Settings-&gt; הרשאות, כל משתמש עם רמה&gt; = 100 בלוח האינטרנט יכול להיות אלוהים, בכל מקום. זה יכול להיות מוגדר עבור אזורים בודדים אם ברירת המחדל הרשאות הוא בדק האו"ם, ואתה לעקוף אותו בלוח באזור עם ** אפשר לאלים זה אזור **. יש הגדרה זו שום קשר עם שתי הגדרות אחרות.</value>
   </data>
   <data name="Allow_cloud" xml:space="preserve">
     <value>העננים המקוריים Second Life</value>
@@ -160,7 +160,7 @@
     <value>אובייקטים ניתן לקחת הרשת שלך באמצעות Hypergrid</value>
   </data>
   <data name="Allow_Or_Disallow_Gods_word" xml:space="preserve">
-    <value>להתיר או לאסור אלים</value>
+    <value>אפשר אלים מבוססי רמה</value>
   </data>
   <data name="Allow_Region_Owner_Gods_word" xml:space="preserve">
     <value>אפשר אלי בעלי האזור</value>
@@ -384,14 +384,14 @@
   <data name="Cancel_word" xml:space="preserve">
     <value>לבטל</value>
   </data>
-  <data name="Cannot locate folder_word" xml:space="preserve">
-    <value>אין אפשרות לאתר תיקייה</value>
-  </data>
   <data name="Cannot_find_region_word" xml:space="preserve">
     <value>לא ניתן למצוא באזור</value>
   </data>
   <data name="Cannot_locate" xml:space="preserve">
     <value>אין אפשרות לאתר באזור בברכת ברירה</value>
+  </data>
+  <data name="Cannot_locate_folder_word" xml:space="preserve">
+    <value>אין אפשרות לאתר תיקייה</value>
   </data>
   <data name="Cannot_Normalize" xml:space="preserve">
     <value>לנרמל לא יכול למפות כאזור יהיה במיקום פחות מ 0</value>
@@ -401,6 +401,9 @@
   </data>
   <data name="Cannot_save_region_word" xml:space="preserve">
     <value>לא ניתן לשמור אזור:</value>
+  </data>
+  <data name="Category_word" xml:space="preserve">
+    <value>קטגוריה</value>
   </data>
   <data name="CenterMap" xml:space="preserve">
     <value>במרכז המפה לתאם</value>
@@ -449,6 +452,9 @@
   </data>
   <data name="Choose_Cache" xml:space="preserve">
     <value>בחר אילו מטמון לרוקן</value>
+  </data>
+  <data name="Choose_folder_for_backups" xml:space="preserve">
+    <value>בחר תיקיית גיבויי חנות</value>
   </data>
   <data name="Choose_Region_word" xml:space="preserve">
     <value>בחר אזור</value>
@@ -564,6 +570,9 @@
   <data name="Click_to_load" xml:space="preserve">
     <value>לחץ לטעינת תוכן זה</value>
   </data>
+  <data name="Click_To_Load_Here" xml:space="preserve">
+    <value>לחץ כדי לטעון בפינה השמאלית התחתונה של הקובץ במיקום זה.</value>
+  </data>
   <data name="Click_to_Request_Voice_Service" xml:space="preserve">
     <value>לחץ כדי לבקש שירות Voice</value>
   </data>
@@ -661,7 +670,7 @@
     <value>Dynamic DNS שם משמש כבר. אולי אתה משתמש בסיסמה שגויה?</value>
   </data>
   <data name="Debug_word" xml:space="preserve">
-    <value>Debug</value>
+    <value>לנפות</value>
   </data>
   <data name="Default_8001_word" xml:space="preserve">
     <value>ברירת מחדל 8001</value>
@@ -701,6 +710,9 @@
   </data>
   <data name="Deregister_word" xml:space="preserve">
     <value>deregister</value>
+  </data>
+  <data name="Description_word" xml:space="preserve">
+    <value>תיאור</value>
   </data>
   <data name="Details_word" xml:space="preserve">
     <value>פרטים</value>
@@ -756,6 +768,9 @@
   <data name="DNS_HG_Name" xml:space="preserve">
     <value>שם DNS &amp; Hypergrid</value>
   </data>
+  <data name="DosBoxRunning" xml:space="preserve">
+    <value>דוס Box בשם חזק כבר פועל</value>
+  </data>
   <data name="DOS_Box_word" xml:space="preserve">
     <value>תיבת DOS</value>
   </data>
@@ -772,9 +787,12 @@
     <value>DreamGrid</value>
   </data>
   <data name="Dynamic_DNS_word" xml:space="preserve">
-    <value>כתובת דינמית DNSRegistering DynDNS</value>
+    <value>Dynamic DNS</value>
   </data>
   <data name="DynDNS" xml:space="preserve">
+    <value>DynDNS רישום כתובת</value>
+  </data>
+  <data name="DynDNS_password_word" xml:space="preserve">
     <value>סיסמא DynDNS</value>
   </data>
   <data name="EditRegion" xml:space="preserve">
@@ -874,7 +892,7 @@
     <value>חלאות אדם Asset מטמון</value>
   </data>
   <data name="Failed_LAN" xml:space="preserve">
-    <value>נכשל נסיון להתחבר לאתר האינטרנט.</value>
+    <value>נכשל ניסיון להתחבר לאתר אינטרנט.</value>
   </data>
   <data name="Failed_to_load_Settings_INI_word" xml:space="preserve">
     <value>נכשל הניסיון לטעון הגדרות INI</value>
@@ -961,7 +979,7 @@
     <value>Grid שרת עם חזק</value>
   </data>
   <data name="Grid_TCP_is_set" xml:space="preserve">
-    <value>Grid TCP היציאה מוגדרת</value>
+    <value>רשת TCP היציאה מוגדרת</value>
   </data>
   <data name="Grid_UDP_is_set" xml:space="preserve">
     <value>רשת UDP Port הוא סט</value>
@@ -1033,7 +1051,10 @@
     <value>Hypergrid צריך לעבוד.</value>
   </data>
   <data name="Hide" xml:space="preserve">
-    <value>להתחבא</value>
+    <value>אזורי סתר בסיום</value>
+  </data>
+  <data name="Hide_Allways_word" xml:space="preserve">
+    <value>אזורי סתר תמיד</value>
   </data>
   <data name="Highest_Used" xml:space="preserve">
     <value>הגבוה ביותר בשימוש: 8004</value>
@@ -1099,7 +1120,7 @@
     <value>לחץ על עזרה בהגדרת Icecast</value>
   </data>
   <data name="Icecast_is_Set" xml:space="preserve">
-    <value>Icecast היציאה מוגדר</value>
+    <value>Icecast היציאה מוגדרת</value>
   </data>
   <data name="Icecast_Started" xml:space="preserve">
     <value>Icecast Started</value>
@@ -1197,9 +1218,6 @@
   <data name="ListAvatars" xml:space="preserve">
     <value>צפו ברשימה של אווטרים</value>
   </data>
-  <data name="Load Parcel" xml:space="preserve">
-    <value>טעינת Parcel</value>
-  </data>
   <data name="Loading_Settings" xml:space="preserve">
     <value>טוען settings.ini</value>
   </data>
@@ -1212,6 +1230,12 @@
   <data name="Load_Free_Avatar_Inventory_text" xml:space="preserve">
     <value>IARS טען מאתר האינטרנט Outworldz</value>
   </data>
+  <data name="Load_Free_Avatar_Inventory_word" xml:space="preserve">
+    <value>חינם טענתי מלאי אישי (www)</value>
+  </data>
+  <data name="Load_Free_DreamGrid_OARs_word" xml:space="preserve">
+    <value>חינם לטעון DreamGrid משוטים (www)</value>
+  </data>
   <data name="Load_Free_Dreamworld_OARs" xml:space="preserve">
     <value>טעינה חינם Dreamworld משוטים</value>
   </data>
@@ -1221,8 +1245,17 @@
   <data name="Load_Local_IARs" xml:space="preserve">
     <value>טעינת IARs המקומי מתיקיית IAR</value>
   </data>
+  <data name="Load_Local_IARs_word" xml:space="preserve">
+    <value>טעינת IARs המקומי</value>
+  </data>
   <data name="Load_Local_OARs" xml:space="preserve">
     <value>טעינת משוטים מקומיים מתיקיית המשוט</value>
+  </data>
+  <data name="Load_Local_OARs_word" xml:space="preserve">
+    <value>טעינת משוטים מקומיים</value>
+  </data>
+  <data name="Load_Parcel" xml:space="preserve">
+    <value>טעינת Parcel</value>
   </data>
   <data name="Load_Region_OAR" xml:space="preserve">
     <value>טעינת אזור משוט</value>
@@ -1263,7 +1296,7 @@
   <data name="Make_a_backup_word" xml:space="preserve">
     <value>בצע גיבוי?</value>
   </data>
-  <data name="Manager God_word" xml:space="preserve">
+  <data name="Manager_God_word" xml:space="preserve">
     <value>Manager_God</value>
   </data>
   <data name="Maps_Erased" xml:space="preserve">
@@ -1341,6 +1374,9 @@
   <data name="More_Free_Islands" xml:space="preserve">
     <value>נוסף איים חינם Parts</value>
   </data>
+  <data name="More_Free_Islands_and_Parts_word" xml:space="preserve">
+    <value>עוד חופשי איים וחלקים (www)</value>
+  </data>
   <data name="More_Help" xml:space="preserve">
     <value>לחץ לקבלת עזרה נוספת באתר</value>
   </data>
@@ -1384,7 +1420,10 @@
     <value>שם</value>
   </data>
   <data name="NameAlreadySet" xml:space="preserve">
-    <value>שם המערכת שלך הוגדר {newname}. אתה יכול לשנות את השם בתפריט DNS בכל עת</value>
+    <value>שם Hypergrid המערכת שלך אופס. אתה יכול לשנות את השם של התקנה-הגדרות-&gt; תפריט DNS</value>
+  </data>
+  <data name="Name_of_Region_Word" xml:space="preserve">
+    <value>שם אזור</value>
   </data>
   <data name="Neighbor_Distance" xml:space="preserve">
     <value>שכן מרחק (ברירת מחדל = 25.0)</value>
@@ -1494,14 +1533,20 @@
   <data name="OAR_Load_and_Save" xml:space="preserve">
     <value>טען משוט שמור</value>
   </data>
+  <data name="OAR_load_save_backupp_word" xml:space="preserve">
+    <value>טען משוט, שמור גיבוי</value>
+  </data>
   <data name="Object_Path" xml:space="preserve">
+    <value>נתיב ושם אובייקט</value>
+  </data>
+  <data name="Object_Path_and_name" xml:space="preserve">
     <value>נתיב ושם אובייקט</value>
   </data>
   <data name="ODE_text" xml:space="preserve">
     <value>מנוע פתוח דינמי</value>
   </data>
   <data name="ODE_word_NT" xml:space="preserve">
-    <value>תודה</value>
+    <value>שיר הלל</value>
   </data>
   <data name="Off" xml:space="preserve">
     <value>כבוי</value>
@@ -1548,11 +1593,11 @@
   <data name="Passed_LAN" xml:space="preserve">
     <value>עבר LAN בדיקת Loopback</value>
   </data>
-  <data name="Password" xml:space="preserve">
-    <value>סיסמה</value>
-  </data>
   <data name="Password_Text" xml:space="preserve">
     <value>באפשרותך לשנות את הסיסמה רק כאשר Opensim הוא פועל</value>
+  </data>
+  <data name="Password_word" xml:space="preserve">
+    <value>סיסמה</value>
   </data>
   <data name="PDF_Manual_word" xml:space="preserve">
     <value>ידני PDF</value>
@@ -1562,6 +1607,9 @@
   </data>
   <data name="Permissions_word" xml:space="preserve">
     <value>הרשאות</value>
+  </data>
+  <data name="Photo_Word" xml:space="preserve">
+    <value>תמונה</value>
   </data>
   <data name="Physical_Prim" xml:space="preserve">
     <value>גודל פיזי פרים מקס</value>
@@ -1698,6 +1746,9 @@
   <data name="Region_Database" xml:space="preserve">
     <value>מסד האזור</value>
   </data>
+  <data name="Region_full_msg" xml:space="preserve">
+    <value>מקס מספר אווטרים + NPCs</value>
+  </data>
   <data name="Region_List" xml:space="preserve">
     <value>רשימת האזור</value>
   </data>
@@ -1731,6 +1782,9 @@
   <data name="Region_Port_word" xml:space="preserve">
     <value>אזור נמל</value>
   </data>
+  <data name="Region_Removed" xml:space="preserve">
+    <value>האזור הוסר</value>
+  </data>
   <data name="Region_ServerName" xml:space="preserve">
     <value>שרת להתחבר. "Localhost" היא ברירת המחדל.</value>
   </data>
@@ -1745,9 +1799,6 @@
   </data>
   <data name="Region_UUID_Is_invalid_word" xml:space="preserve">
     <value>אזור UUID אינו חוקי</value>
-  </data>
-  <data name="Reion_Removed" xml:space="preserve">
-    <value>האזור הוסר</value>
   </data>
   <data name="Reload" xml:space="preserve">
     <value>רענן לרשת</value>
@@ -1794,14 +1845,17 @@
   <data name="Restart_on_Physics_Crash_Text" xml:space="preserve">
     <value>התרסקות פיזיקה Bulletsim יאלץ הפעלה מחדש סימולטור</value>
   </data>
+  <data name="Restart_Pending_word" xml:space="preserve">
+    <value>הפעל מחדש בהמתנה</value>
+  </data>
   <data name="Restart_Periodically_Minutes" xml:space="preserve">
     <value>האזורים כל יופעלו מחדש אוטומטית אחרי דקות רבות כל כך פועלים</value>
   </data>
   <data name="Restart_Periodically_word" xml:space="preserve">
     <value>הפעל מחדש באופן תקופתי</value>
   </data>
-  <data name="Restart_Queued_for_word" xml:space="preserve">
-    <value>הפעל מחדש בתור במשך</value>
+  <data name="Restart_Queued_word" xml:space="preserve">
+    <value>הפעל מחדש שבתור</value>
   </data>
   <data name="Restart_Region_word" xml:space="preserve">
     <value>אזור Restart</value>
@@ -1833,6 +1887,9 @@
   <data name="Robust_failed_to_start" xml:space="preserve">
     <value>חזק נכשל</value>
   </data>
+  <data name="Robust_not_Running" xml:space="preserve">
+    <value>יציבה לא פועלת במחשב זה</value>
+  </data>
   <data name="Robust_running" xml:space="preserve">
     <value>חזק הוא פועל</value>
   </data>
@@ -1844,6 +1901,9 @@
   </data>
   <data name="Running" xml:space="preserve">
     <value>רץ</value>
+  </data>
+  <data name="Running_as_a_Region_Server_word" xml:space="preserve">
+    <value>Running כשרת אזור</value>
   </data>
   <data name="Running_Network" xml:space="preserve">
     <value>הרצת אבחוני רשת</value>
@@ -1908,6 +1968,9 @@
   <data name="Search_All_Grids_word" xml:space="preserve">
     <value>חפש בכל רשתות</value>
   </data>
+  <data name="Search_Connect_failed" xml:space="preserve">
+    <value>לא הצליח להתחבר חפש במסד</value>
+  </data>
   <data name="Search_word" xml:space="preserve">
     <value>לחפש</value>
   </data>
@@ -1919,6 +1982,9 @@
   </data>
   <data name="See_Log" xml:space="preserve">
     <value>האם אתה רוצה לראות את קובץ היומן?</value>
+  </data>
+  <data name="See_Ports_In_Use_word" xml:space="preserve">
+    <value>ראה יציאות שנמצאים בשימוש</value>
   </data>
   <data name="Selectallnone" xml:space="preserve">
     <value>בוחר את כל או אף אחד התיבות</value>
@@ -1971,6 +2037,9 @@
   <data name="Setup_Voice_Service" xml:space="preserve">
     <value>שירות קול Setup</value>
   </data>
+  <data name="Setup_word" xml:space="preserve">
+    <value>להכין</value>
+  </data>
   <data name="Set_Debug_Level_word" xml:space="preserve">
     <value>סט Debug רמה</value>
   </data>
@@ -1993,7 +2062,7 @@
     <value>צג פרטי משתמש</value>
   </data>
   <data name="Show_word" xml:space="preserve">
-    <value>הצג</value>
+    <value>אזורים מציגים תמיד</value>
   </data>
   <data name="Shutdown_word" xml:space="preserve">
     <value>לכבות</value>
@@ -2248,7 +2317,7 @@
     <value>משתמש</value>
   </data>
   <data name="User_ID_word" xml:space="preserve">
-    <value>תעודת זהות של משתמש</value>
+    <value>תעודת זהות של המשתמש</value>
   </data>
   <data name="User_Name_word" xml:space="preserve">
     <value>שם משתמש</value>
@@ -2310,6 +2379,9 @@
   <data name="Voice_Settings_Word" xml:space="preserve">
     <value>הגדרות קול</value>
   </data>
+  <data name="Waiting_on_Robust" xml:space="preserve">
+    <value>הממתין חזק כדי להתחיל</value>
+  </data>
   <data name="Waiting_text" xml:space="preserve">
     <value>מחכים כל האזורים ליציאה</value>
   </data>
@@ -2321,6 +2393,9 @@
   </data>
   <data name="WebServerPanel" xml:space="preserve">
     <value>לוח שרת האינטרנט</value>
+  </data>
+  <data name="Web_Download_Link_Word" xml:space="preserve">
+    <value>קישור להורדה באינטרנט</value>
   </data>
   <data name="Web_Port" xml:space="preserve">
     <value>אינטרנט פורט (80, או 8000)</value>
@@ -2351,5 +2426,14 @@
   </data>
   <data name="Wrong" xml:space="preserve">
     <value>משהו לא בסדר עם האינטרנט</value>
+  </data>
+  <data name="XEngine_word" xml:space="preserve">
+    <value>XEngine</value>
+  </data>
+  <data name="YEngine_word" xml:space="preserve">
+    <value>YEngine</value>
+  </data>
+  <data name="Yes_word" xml:space="preserve">
+    <value>כן</value>
   </data>
 </root>
