--- a/Installer_Src/Setup DreamWorld/My Project/Resources.is.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.is.resx
@@ -144,8 +144,8 @@
   <data name="AllNone_word" xml:space="preserve">
     <value>All / Ekkert</value>
   </data>
-  <data name="Allow200" xml:space="preserve">
-    <value>Leyfa 200+ Level guði</value>
+  <data name="AllowGodsTooltip" xml:space="preserve">
+    <value>Ef þessi kassi er valinn í Stillingar-&gt; Heimildir, þá hvaða notandi með stúdentspróf&gt; = 100 í vefnum pallborð geta orðið Guð, hvar sem er. Þetta getur verið sett fyrir einstökum svæðum ef vanræksla á heimildir er UN-köflóttur og þú hnekkt í svæðinu pallborð með ** Leyfa Gods á þessu svæði **. Þessi stilling hefur ekkert að gera með hinum tveimur stillingum.</value>
   </data>
   <data name="Allow_cloud" xml:space="preserve">
     <value>Upprunalega Second Life ský</value>
@@ -160,7 +160,7 @@
     <value>Hlutir geta verið tekin úr rist þínu í gegnum Hypergrid</value>
   </data>
   <data name="Allow_Or_Disallow_Gods_word" xml:space="preserve">
-    <value>Leyfa eða banna Gods</value>
+    <value>Leyfa Level-undirstaða guði</value>
   </data>
   <data name="Allow_Region_Owner_Gods_word" xml:space="preserve">
     <value>Leyfa Svæði eigandi guði</value>
@@ -384,14 +384,14 @@
   <data name="Cancel_word" xml:space="preserve">
     <value>Hætta við</value>
   </data>
-  <data name="Cannot locate folder_word" xml:space="preserve">
-    <value>Ekki er hægt að staðsetja mappa</value>
-  </data>
   <data name="Cannot_find_region_word" xml:space="preserve">
     <value>Get ekki fundið svæði</value>
   </data>
   <data name="Cannot_locate" xml:space="preserve">
     <value>Ekki er hægt að staðsetja Sjálfgefið velkomin svæði</value>
+  </data>
+  <data name="Cannot_locate_folder_word" xml:space="preserve">
+    <value>Ekki er hægt að staðsetja mappa</value>
   </data>
   <data name="Cannot_Normalize" xml:space="preserve">
     <value>Ekki er hægt að staðla landakort sem svæðið verður á stað minna en 0</value>
@@ -401,6 +401,9 @@
   </data>
   <data name="Cannot_save_region_word" xml:space="preserve">
     <value>Get ekki vistað svæði:</value>
+  </data>
+  <data name="Category_word" xml:space="preserve">
+    <value>Flokkur</value>
   </data>
   <data name="CenterMap" xml:space="preserve">
     <value>Miðju kortinu samræma</value>
@@ -449,6 +452,9 @@
   </data>
   <data name="Choose_Cache" xml:space="preserve">
     <value>Veldu hvaða skyndiminni til að tæma</value>
+  </data>
+  <data name="Choose_folder_for_backups" xml:space="preserve">
+    <value>Veldu möppu til að geyma afrit</value>
   </data>
   <data name="Choose_Region_word" xml:space="preserve">
     <value>Veldu svæði</value>
@@ -563,6 +569,9 @@
   </data>
   <data name="Click_to_load" xml:space="preserve">
     <value>Smelltu til að hlaða þetta efni</value>
+  </data>
+  <data name="Click_To_Load_Here" xml:space="preserve">
+    <value>Smelltu til að hlaða neðri vinstra horninu á skrá í þessum stað.</value>
   </data>
   <data name="Click_to_Request_Voice_Service" xml:space="preserve">
     <value>Smelltu til að óska ​​Voice Þjónusta</value>
@@ -702,6 +711,9 @@
   <data name="Deregister_word" xml:space="preserve">
     <value>afskrá</value>
   </data>
+  <data name="Description_word" xml:space="preserve">
+    <value>Lýsing</value>
+  </data>
   <data name="Details_word" xml:space="preserve">
     <value>Nánar</value>
   </data>
@@ -756,6 +768,9 @@
   <data name="DNS_HG_Name" xml:space="preserve">
     <value>DNS nafn og Hypergrid</value>
   </data>
+  <data name="DosBoxRunning" xml:space="preserve">
+    <value>A DOS Box nafni Sterkur er þegar í gangi</value>
+  </data>
   <data name="DOS_Box_word" xml:space="preserve">
     <value>DOS Box</value>
   </data>
@@ -772,9 +787,12 @@
     <value>DreamGrid</value>
   </data>
   <data name="Dynamic_DNS_word" xml:space="preserve">
-    <value>Dynamic DNSRegistering DynDNS netfang</value>
+    <value>dynamic DNS</value>
   </data>
   <data name="DynDNS" xml:space="preserve">
+    <value>Sem skrá DynDNS netfang</value>
+  </data>
+  <data name="DynDNS_password_word" xml:space="preserve">
     <value>DynDNS lykilorð</value>
   </data>
   <data name="EditRegion" xml:space="preserve">
@@ -1033,7 +1051,10 @@
     <value>Hypergrid ætti að vinna.</value>
   </data>
   <data name="Hide" xml:space="preserve">
-    <value>fela</value>
+    <value>Fela Svæði þegar lokið</value>
+  </data>
+  <data name="Hide_Allways_word" xml:space="preserve">
+    <value>Fela alltaf Svæði</value>
   </data>
   <data name="Highest_Used" xml:space="preserve">
     <value>Hæsta notuð: 8004</value>
@@ -1197,9 +1218,6 @@
   <data name="ListAvatars" xml:space="preserve">
     <value>Skoða lista yfir Avatars</value>
   </data>
-  <data name="Load Parcel" xml:space="preserve">
-    <value>hlaða Parcel</value>
-  </data>
   <data name="Loading_Settings" xml:space="preserve">
     <value>hleðsla Settings.ini</value>
   </data>
@@ -1212,6 +1230,12 @@
   <data name="Load_Free_Avatar_Inventory_text" xml:space="preserve">
     <value>Hlaða IARS frá Outworldz vef</value>
   </data>
+  <data name="Load_Free_Avatar_Inventory_word" xml:space="preserve">
+    <value>Hlaða Free Avatar Inventory (www)</value>
+  </data>
+  <data name="Load_Free_DreamGrid_OARs_word" xml:space="preserve">
+    <value>Hlaða Free DreamGrid árar (www)</value>
+  </data>
   <data name="Load_Free_Dreamworld_OARs" xml:space="preserve">
     <value>Hlaða Free Dreamworld árar</value>
   </data>
@@ -1221,8 +1245,17 @@
   <data name="Load_Local_IARs" xml:space="preserve">
     <value>Hlaða Local IARs frá iar möppunni</value>
   </data>
+  <data name="Load_Local_IARs_word" xml:space="preserve">
+    <value>Hlaða Local IARs</value>
+  </data>
   <data name="Load_Local_OARs" xml:space="preserve">
     <value>Hlaða Local árar úr árina möppunni</value>
+  </data>
+  <data name="Load_Local_OARs_word" xml:space="preserve">
+    <value>Hlaða Local árar</value>
+  </data>
+  <data name="Load_Parcel" xml:space="preserve">
+    <value>hlaða Parcel</value>
   </data>
   <data name="Load_Region_OAR" xml:space="preserve">
     <value>Hlaða Region OAR</value>
@@ -1263,7 +1296,7 @@
   <data name="Make_a_backup_word" xml:space="preserve">
     <value>Gerðu afrit?</value>
   </data>
-  <data name="Manager God_word" xml:space="preserve">
+  <data name="Manager_God_word" xml:space="preserve">
     <value>Manager_God</value>
   </data>
   <data name="Maps_Erased" xml:space="preserve">
@@ -1341,6 +1374,9 @@
   <data name="More_Free_Islands" xml:space="preserve">
     <value>Meira ókeypis Islands og hlutar</value>
   </data>
+  <data name="More_Free_Islands_and_Parts_word" xml:space="preserve">
+    <value>Fleiri Ókeypis Islands og Varahlutir (www)</value>
+  </data>
   <data name="More_Help" xml:space="preserve">
     <value>Smelltu fyrir frekari hjálp á vefsvæðinu</value>
   </data>
@@ -1384,7 +1420,10 @@
     <value>heiti</value>
   </data>
   <data name="NameAlreadySet" xml:space="preserve">
-    <value>Kerfið Nafnið þitt hefur verið sett á {newname}. Hægt er að breyta nafni á DNS valmyndinni hvenær</value>
+    <value>Kerfið Hypergrid Nafnið þitt hefur verið endurstillt. Hægt er að breyta nafni á Setup-Stillingar-&gt; DNS matseðill</value>
+  </data>
+  <data name="Name_of_Region_Word" xml:space="preserve">
+    <value>Heiti svæðum</value>
   </data>
   <data name="Neighbor_Distance" xml:space="preserve">
     <value>Nágranni Vegalengd (sjálfgefið = 25,0)</value>
@@ -1494,7 +1533,13 @@
   <data name="OAR_Load_and_Save" xml:space="preserve">
     <value>OAR hlaða og vista</value>
   </data>
+  <data name="OAR_load_save_backupp_word" xml:space="preserve">
+    <value>OAR Hlaða, Vista og Backup</value>
+  </data>
   <data name="Object_Path" xml:space="preserve">
+    <value>Object Path og nafn</value>
+  </data>
+  <data name="Object_Path_and_name" xml:space="preserve">
     <value>Object Path og nafn</value>
   </data>
   <data name="ODE_text" xml:space="preserve">
@@ -1548,11 +1593,11 @@
   <data name="Passed_LAN" xml:space="preserve">
     <value>Liðið LAN sýndardiskur Test</value>
   </data>
-  <data name="Password" xml:space="preserve">
-    <value>Lykilorð</value>
-  </data>
   <data name="Password_Text" xml:space="preserve">
     <value>Þú getur aðeins breytt lykilorðinu ef Opensim er í gangi</value>
+  </data>
+  <data name="Password_word" xml:space="preserve">
+    <value>Lykilorð</value>
   </data>
   <data name="PDF_Manual_word" xml:space="preserve">
     <value>PDF Manual</value>
@@ -1562,6 +1607,9 @@
   </data>
   <data name="Permissions_word" xml:space="preserve">
     <value>heimildir</value>
+  </data>
+  <data name="Photo_Word" xml:space="preserve">
+    <value>mynd</value>
   </data>
   <data name="Physical_Prim" xml:space="preserve">
     <value>Líkamleg Prim Max Size</value>
@@ -1698,6 +1746,9 @@
   <data name="Region_Database" xml:space="preserve">
     <value>svæði Database</value>
   </data>
+  <data name="Region_full_msg" xml:space="preserve">
+    <value>Max fjöldi avatars + NPCs</value>
+  </data>
   <data name="Region_List" xml:space="preserve">
     <value>svæði List</value>
   </data>
@@ -1731,6 +1782,9 @@
   <data name="Region_Port_word" xml:space="preserve">
     <value>svæði Port</value>
   </data>
+  <data name="Region_Removed" xml:space="preserve">
+    <value>Svæðinu hefur verið fjarlægður</value>
+  </data>
   <data name="Region_ServerName" xml:space="preserve">
     <value>Miðlarinn að tengjast. 'Localhost' er sjálfgefið.</value>
   </data>
@@ -1745,9 +1799,6 @@
   </data>
   <data name="Region_UUID_Is_invalid_word" xml:space="preserve">
     <value>Region UUID er ógilt</value>
-  </data>
-  <data name="Reion_Removed" xml:space="preserve">
-    <value>Svæðinu hefur verið fjarlægður</value>
   </data>
   <data name="Reload" xml:space="preserve">
     <value>Endurhlaða rist</value>
@@ -1794,14 +1845,17 @@
   <data name="Restart_on_Physics_Crash_Text" xml:space="preserve">
     <value>Bulletsim eðlisfræði hrun þvinga fram hermir endurræsa</value>
   </data>
+  <data name="Restart_Pending_word" xml:space="preserve">
+    <value>endurræsa í bið</value>
+  </data>
   <data name="Restart_Periodically_Minutes" xml:space="preserve">
     <value>Bæir munu allir sjálfvirkt endurræsa eftir svo margar mínútur að keyra</value>
   </data>
   <data name="Restart_Periodically_word" xml:space="preserve">
     <value>endurræsa reglulega</value>
   </data>
-  <data name="Restart_Queued_for_word" xml:space="preserve">
-    <value>Endurræsa biðröð fyrir</value>
+  <data name="Restart_Queued_word" xml:space="preserve">
+    <value>endurræsa biðröð</value>
   </data>
   <data name="Restart_Region_word" xml:space="preserve">
     <value>endurræsa Region</value>
@@ -1833,6 +1887,9 @@
   <data name="Robust_failed_to_start" xml:space="preserve">
     <value>Sterkur mistókst að byrja</value>
   </data>
+  <data name="Robust_not_Running" xml:space="preserve">
+    <value>Sterkur er ekki í gangi á þessari vél</value>
+  </data>
   <data name="Robust_running" xml:space="preserve">
     <value>Sterkur er í gangi</value>
   </data>
@@ -1844,6 +1901,9 @@
   </data>
   <data name="Running" xml:space="preserve">
     <value>Running</value>
+  </data>
+  <data name="Running_as_a_Region_Server_word" xml:space="preserve">
+    <value>Gangi sem svæðið Server</value>
   </data>
   <data name="Running_Network" xml:space="preserve">
     <value>Running Network Diagnostics</value>
@@ -1908,6 +1968,9 @@
   <data name="Search_All_Grids_word" xml:space="preserve">
     <value>Leita All grids</value>
   </data>
+  <data name="Search_Connect_failed" xml:space="preserve">
+    <value>Ekki tókst að tengjast Leit Database</value>
+  </data>
   <data name="Search_word" xml:space="preserve">
     <value>leita</value>
   </data>
@@ -1919,6 +1982,9 @@
   </data>
   <data name="See_Log" xml:space="preserve">
     <value>Viltu sjá annálinn?</value>
+  </data>
+  <data name="See_Ports_In_Use_word" xml:space="preserve">
+    <value>Sjá Hafnir í notkun</value>
   </data>
   <data name="Selectallnone" xml:space="preserve">
     <value>Velur allar eða enginn gátreitunum</value>
@@ -1971,6 +2037,9 @@
   <data name="Setup_Voice_Service" xml:space="preserve">
     <value>Skipulag Voice Þjónusta</value>
   </data>
+  <data name="Setup_word" xml:space="preserve">
+    <value>Uppsetning</value>
+  </data>
   <data name="Set_Debug_Level_word" xml:space="preserve">
     <value>Setja Kemba Level</value>
   </data>
@@ -1993,7 +2062,7 @@
     <value>Sýna User upplýsingar</value>
   </data>
   <data name="Show_word" xml:space="preserve">
-    <value>Sýna</value>
+    <value>Alltaf sýna Svæði</value>
   </data>
   <data name="Shutdown_word" xml:space="preserve">
     <value>lokun</value>
@@ -2197,7 +2266,7 @@
     <value>Bilanagreining</value>
   </data>
   <data name="Type_word" xml:space="preserve">
-    <value>Tegund</value>
+    <value>Gerð</value>
   </data>
   <data name="UbitHybrid" xml:space="preserve">
     <value>Ubit Nethönnunarumhverfi / Bullet Hybrid</value>
@@ -2310,6 +2379,9 @@
   <data name="Voice_Settings_Word" xml:space="preserve">
     <value>rödd Stillingar</value>
   </data>
+  <data name="Waiting_on_Robust" xml:space="preserve">
+    <value>Bíða á Sterkur til að byrja</value>
+  </data>
   <data name="Waiting_text" xml:space="preserve">
     <value>Bíð eftir öllum svæðum til að hætta</value>
   </data>
@@ -2321,6 +2393,9 @@
   </data>
   <data name="WebServerPanel" xml:space="preserve">
     <value>Web Server Panel</value>
+  </data>
+  <data name="Web_Download_Link_Word" xml:space="preserve">
+    <value>Web Sækja Link</value>
   </data>
   <data name="Web_Port" xml:space="preserve">
     <value>Vefurinn Port (80, eða 8000)</value>
@@ -2351,5 +2426,14 @@
   </data>
   <data name="Wrong" xml:space="preserve">
     <value>Eitthvað er athugavert við Internetið</value>
+  </data>
+  <data name="XEngine_word" xml:space="preserve">
+    <value>XEngine</value>
+  </data>
+  <data name="YEngine_word" xml:space="preserve">
+    <value>YEngine</value>
+  </data>
+  <data name="Yes_word" xml:space="preserve">
+    <value>Já</value>
   </data>
 </root>
