--- a/Installer_Src/Setup DreamWorld/My Project/Resources.nl-NL.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.nl-NL.resx
@@ -121,7 +121,7 @@
     <value>Aborted</value>
   </data>
   <data name="About_word" xml:space="preserve">
-    <value>Wat betreft</value>
+    <value>Over</value>
   </data>
   <data name="Add_Region_word" xml:space="preserve">
     <value>Voeg Region</value>
@@ -144,8 +144,8 @@
   <data name="AllNone_word" xml:space="preserve">
     <value>Alle / Geen</value>
   </data>
-  <data name="Allow200" xml:space="preserve">
-    <value>Laat 200+ Level goden</value>
+  <data name="AllowGodsTooltip" xml:space="preserve">
+    <value>Als dit vakje is aangevinkt In instellingen-&gt; Rechten, dan is elke gebruiker met een niveau&gt; = 100 in de Web paneel kan een God te worden, waar dan ook. Dit kan ingesteld voor afzonderlijke regio's zijn als de standaard in Machtigingen is de VN-gecontroleerd, en je het overschrijven in de regio paneel met ** Laat Goden in deze regio laten **. Deze instelling heeft niets te maken met de twee andere instellingen.</value>
   </data>
   <data name="Allow_cloud" xml:space="preserve">
     <value>De originele Second Life wolken</value>
@@ -160,7 +160,7 @@
     <value>Objecten kunnen worden genomen van uw netwerk via HyperGrid</value>
   </data>
   <data name="Allow_Or_Disallow_Gods_word" xml:space="preserve">
-    <value>Toestaan ​​of weigeren Goden</value>
+    <value>Laat Level-gebaseerde goden</value>
   </data>
   <data name="Allow_Region_Owner_Gods_word" xml:space="preserve">
     <value>Laat Region eigenaar goden</value>
@@ -175,7 +175,7 @@
     <value>Alle gebruikers, All Sims</value>
   </data>
   <data name="All_word" xml:space="preserve">
-    <value>Alle</value>
+    <value>Allemaal</value>
   </data>
   <data name="AlphaNum" xml:space="preserve">
     <value>Alfanumeriek plusminus (geen spaties of speciale tekens)</value>
@@ -226,7 +226,7 @@
     <value>Van toepassing zijn</value>
   </data>
   <data name="Are_You_Sure" xml:space="preserve">
-    <value>Weet je zeker dat? Uw database rloaded uit de back-up en alle bestaande inhoud vervangen. Avatars, sims, inventaris, everyting zal worden overschreven.</value>
+    <value>Weet je het zeker? Uw database rloaded uit de back-up en alle bestaande inhoud vervangen. Avatars, sims, inventaris, everyting zal worden overschreven.</value>
   </data>
   <data name="Are_you_Sure_Delete_Region" xml:space="preserve">
     <value>Bent u zeker dat u dit gebied te verwijderen?</value>
@@ -382,16 +382,16 @@
     <value>Geannuleerd</value>
   </data>
   <data name="Cancel_word" xml:space="preserve">
-    <value>Annuleer</value>
-  </data>
-  <data name="Cannot locate folder_word" xml:space="preserve">
-    <value>Kan niet vinden map</value>
+    <value>annuleren</value>
   </data>
   <data name="Cannot_find_region_word" xml:space="preserve">
     <value>Kan de regio niet vinden</value>
   </data>
   <data name="Cannot_locate" xml:space="preserve">
     <value>Kan niet vinden Default welcome regio</value>
+  </data>
+  <data name="Cannot_locate_folder_word" xml:space="preserve">
+    <value>Kan niet vinden map</value>
   </data>
   <data name="Cannot_Normalize" xml:space="preserve">
     <value>Kan niet normaliseren kaart te zetten als een regio zal worden op een locatie op minder dan 0</value>
@@ -402,6 +402,9 @@
   <data name="Cannot_save_region_word" xml:space="preserve">
     <value>Kan regio niet opslaan:</value>
   </data>
+  <data name="Category_word" xml:space="preserve">
+    <value>Categorie</value>
+  </data>
   <data name="CenterMap" xml:space="preserve">
     <value>Midden van de kaart te coördineren</value>
   </data>
@@ -409,7 +412,7 @@
     <value>Veranderingen zijn gemaakt. Opslaan?</value>
   </data>
   <data name="Change_Password_word" xml:space="preserve">
-    <value>Wijzig wachtwoord</value>
+    <value>Verander wachtwoord</value>
   </data>
   <data name="Change_UUID" xml:space="preserve">
     <value>Het veranderen van de UUID worden alle gegevens in het oude sim verliezen en het creëren van een nieuwe, lege sim. Weet u zeker dat u de UUID veranderen?</value>
@@ -449,6 +452,9 @@
   </data>
   <data name="Choose_Cache" xml:space="preserve">
     <value>Kies welke cache te legen</value>
+  </data>
+  <data name="Choose_folder_for_backups" xml:space="preserve">
+    <value>Kies een map voor het opslaan van back-ups</value>
   </data>
   <data name="Choose_Region_word" xml:space="preserve">
     <value>Kies Region</value>
@@ -564,6 +570,9 @@
   <data name="Click_to_load" xml:space="preserve">
     <value>Klik hier om deze content te laden</value>
   </data>
+  <data name="Click_To_Load_Here" xml:space="preserve">
+    <value>Klik op de linker benedenhoek van het bestand in deze locatie te laden.</value>
+  </data>
   <data name="Click_to_Request_Voice_Service" xml:space="preserve">
     <value>Klik hier om Voice Service Request</value>
   </data>
@@ -634,7 +643,7 @@
     <value>Current Size op schijf</value>
   </data>
   <data name="Custom_word" xml:space="preserve">
-    <value>gewoonte</value>
+    <value>Op maat</value>
   </data>
   <data name="Cycle_Time_in_seconds" xml:space="preserve">
     <value>Cycle Tijd in seconden</value>
@@ -702,6 +711,9 @@
   <data name="Deregister_word" xml:space="preserve">
     <value>Uitschrijven</value>
   </data>
+  <data name="Description_word" xml:space="preserve">
+    <value>Beschrijving</value>
+  </data>
   <data name="Details_word" xml:space="preserve">
     <value>Details</value>
   </data>
@@ -721,7 +733,7 @@
     <value>niet gestart</value>
   </data>
   <data name="Disabled_word" xml:space="preserve">
-    <value>invalide</value>
+    <value>Gehandicapt</value>
   </data>
   <data name="Disable_Foreigners_word" xml:space="preserve">
     <value>Uitschakelen Buitenlandse Bezoekers</value>
@@ -756,6 +768,9 @@
   <data name="DNS_HG_Name" xml:space="preserve">
     <value>DNS Name &amp; HyperGrid</value>
   </data>
+  <data name="DosBoxRunning" xml:space="preserve">
+    <value>Een DOS Box genaamd Robust wordt al uitgevoerd</value>
+  </data>
   <data name="DOS_Box_word" xml:space="preserve">
     <value>DOS Box</value>
   </data>
@@ -772,9 +787,12 @@
     <value>DreamGrid</value>
   </data>
   <data name="Dynamic_DNS_word" xml:space="preserve">
-    <value>Dynamische DNSRegistering DynDNS-adres</value>
+    <value>Dynamic DNS</value>
   </data>
   <data name="DynDNS" xml:space="preserve">
+    <value>Het registreren van DynDNS-adres</value>
+  </data>
+  <data name="DynDNS_password_word" xml:space="preserve">
     <value>DynDNS wachtwoord</value>
   </data>
   <data name="EditRegion" xml:space="preserve">
@@ -808,7 +826,7 @@
     <value>Activeer Zoeken</value>
   </data>
   <data name="Enable_word" xml:space="preserve">
-    <value>in staat stellen</value>
+    <value>Inschakelen</value>
   </data>
   <data name="EnterName" xml:space="preserve">
     <value>Voer een naam voor uw back-up</value>
@@ -1033,7 +1051,10 @@
     <value>HyperGrid zou moeten werken.</value>
   </data>
   <data name="Hide" xml:space="preserve">
-    <value>Verbergen</value>
+    <value>Hide Regio Wanneer u klaar bent</value>
+  </data>
+  <data name="Hide_Allways_word" xml:space="preserve">
+    <value>Altijd verbergen Regio</value>
   </data>
   <data name="Highest_Used" xml:space="preserve">
     <value>Hoogste gebruikt: 8004</value>
@@ -1048,7 +1069,7 @@
     <value>Huis</value>
   </data>
   <data name="How_Close" xml:space="preserve">
-    <value>Hoe dicht de randen van dingen die we kunnen krijgen zonder zorgen maken?</value>
+    <value>Hoe dicht bij de randen van de dingen die we kunnen krijgen zonder zorgen maken?</value>
   </data>
   <data name="How_Far" xml:space="preserve">
     <value>Hoe ver uit de buurt van andere vogels zouden we willen verblijven?</value>
@@ -1197,9 +1218,6 @@
   <data name="ListAvatars" xml:space="preserve">
     <value>Bekijk de lijst van Avatars</value>
   </data>
-  <data name="Load Parcel" xml:space="preserve">
-    <value>Laad Parcel</value>
-  </data>
   <data name="Loading_Settings" xml:space="preserve">
     <value>Loading Settings.ini</value>
   </data>
@@ -1212,6 +1230,12 @@
   <data name="Load_Free_Avatar_Inventory_text" xml:space="preserve">
     <value>Load IAR van de Outworldz website</value>
   </data>
+  <data name="Load_Free_Avatar_Inventory_word" xml:space="preserve">
+    <value>Load Gratis Avatar Inventory (www)</value>
+  </data>
+  <data name="Load_Free_DreamGrid_OARs_word" xml:space="preserve">
+    <value>Laad Gratis DreamGrid OAR (www)</value>
+  </data>
   <data name="Load_Free_Dreamworld_OARs" xml:space="preserve">
     <value>Plaats gratis Dreamworld OAR</value>
   </data>
@@ -1221,8 +1245,17 @@
   <data name="Load_Local_IARs" xml:space="preserve">
     <value>Laad Lokale IAR's uit de map IAR</value>
   </data>
+  <data name="Load_Local_IARs_word" xml:space="preserve">
+    <value>Load Local IAR</value>
+  </data>
   <data name="Load_Local_OARs" xml:space="preserve">
     <value>Laad Lokale OAR's uit de map OAR</value>
+  </data>
+  <data name="Load_Local_OARs_word" xml:space="preserve">
+    <value>Load Local OAR</value>
+  </data>
+  <data name="Load_Parcel" xml:space="preserve">
+    <value>Laad Parcel</value>
   </data>
   <data name="Load_Region_OAR" xml:space="preserve">
     <value>Laad Region OAR</value>
@@ -1263,7 +1296,7 @@
   <data name="Make_a_backup_word" xml:space="preserve">
     <value>Maak een back-up?</value>
   </data>
-  <data name="Manager God_word" xml:space="preserve">
+  <data name="Manager_God_word" xml:space="preserve">
     <value>Manager_God</value>
   </data>
   <data name="Maps_Erased" xml:space="preserve">
@@ -1330,7 +1363,7 @@
     <value>Hypergrid.org Region Server</value>
   </data>
   <data name="Minutes" xml:space="preserve">
-    <value>Notulen</value>
+    <value>Minuten</value>
   </data>
   <data name="Mode" xml:space="preserve">
     <value>mode</value>
@@ -1340,6 +1373,9 @@
   </data>
   <data name="More_Free_Islands" xml:space="preserve">
     <value>Meer gratis Eilanden en Parts</value>
+  </data>
+  <data name="More_Free_Islands_and_Parts_word" xml:space="preserve">
+    <value>Meer gratis Islands and Parts (www)</value>
   </data>
   <data name="More_Help" xml:space="preserve">
     <value>Klik voor meer hulp bij de Website</value>
@@ -1384,7 +1420,10 @@
     <value>Naam</value>
   </data>
   <data name="NameAlreadySet" xml:space="preserve">
-    <value>Uw naam systeem is ingesteld op {newname}. U kunt de naam wijzigen in het DNS-menu op elk gewenst moment</value>
+    <value>Uw systeem HyperGrid naam is gereset. U kunt de naam veranderen in de Setup-instellingen-&gt; DNS menu</value>
+  </data>
+  <data name="Name_of_Region_Word" xml:space="preserve">
+    <value>Naam van de regio</value>
   </data>
   <data name="Neighbor_Distance" xml:space="preserve">
     <value>Neighbor Afstand (default = 25,0)</value>
@@ -1411,7 +1450,7 @@
     <value>Nieuwe gebruiker huis X, Y, Z</value>
   </data>
   <data name="Next1" xml:space="preserve">
-    <value>volgende</value>
+    <value>De volgende</value>
   </data>
   <data name="Next_Name" xml:space="preserve">
     <value>Volgende Naam</value>
@@ -1438,13 +1477,13 @@
     <value>Houd E-mail</value>
   </data>
   <data name="NotValidUUID" xml:space="preserve">
-    <value>Geen geldige UUID. Heeft u een nieuwe, willekeurige UUID?</value>
+    <value>Geen geldige UUID. Wilt u een nieuwe, willekeurige UUID?</value>
   </data>
   <data name="Not_Forwarded" xml:space="preserve">
     <value>Dit lijkt niet te worden gericht aan deze machine in uw router, dus HyperGrid is niet beschikbaar. Dit kan mogelijk worden opgelost door 'Port Forwards' in je router. Zie Help-&gt; Port Forwards.</value>
   </data>
   <data name="Not_Normal" xml:space="preserve">
-    <value>Normaal gesproken niet afgedwongen door OpenSim. Viewer zal niet meer dan 45.000 tonen. Het instellen van deze hier en het inschakelen van deze in de instellingen zal de limiet af te dwingen en kunnen prims terugkeren!</value>
+    <value>Normaal gesproken niet afgedwongen door OpenSim. Viewer mag niet meer dan 45.000 tonen. Het instellen van deze hier en het inschakelen van deze in de instellingen zal de limiet af te dwingen en kunnen prims terugkeren!</value>
   </data>
   <data name="Not_Running" xml:space="preserve">
     <value>OpenSim is niet actief.</value>
@@ -1494,7 +1533,13 @@
   <data name="OAR_Load_and_Save" xml:space="preserve">
     <value>OAR Laden en opslaan</value>
   </data>
+  <data name="OAR_load_save_backupp_word" xml:space="preserve">
+    <value>OAR Laden, opslaan en back-up</value>
+  </data>
   <data name="Object_Path" xml:space="preserve">
+    <value>Object pad en de naam</value>
+  </data>
+  <data name="Object_Path_and_name" xml:space="preserve">
     <value>Object pad en de naam</value>
   </data>
   <data name="ODE_text" xml:space="preserve">
@@ -1548,11 +1593,11 @@
   <data name="Passed_LAN" xml:space="preserve">
     <value>Geslaagd LAN loopbacktest</value>
   </data>
-  <data name="Password" xml:space="preserve">
-    <value>Wachtwoord</value>
-  </data>
   <data name="Password_Text" xml:space="preserve">
     <value>U kunt alleen het wachtwoord wijzigen wanneer OpenSim is running</value>
+  </data>
+  <data name="Password_word" xml:space="preserve">
+    <value>Wachtwoord</value>
   </data>
   <data name="PDF_Manual_word" xml:space="preserve">
     <value>PDF Manual</value>
@@ -1561,7 +1606,10 @@
     <value>mensen zijn in</value>
   </data>
   <data name="Permissions_word" xml:space="preserve">
-    <value>machtigingen</value>
+    <value>Rechten</value>
+  </data>
+  <data name="Photo_Word" xml:space="preserve">
+    <value>Foto</value>
   </data>
   <data name="Physical_Prim" xml:space="preserve">
     <value>Fysieke Prim Max Size</value>
@@ -1698,6 +1746,9 @@
   <data name="Region_Database" xml:space="preserve">
     <value>Region Database</value>
   </data>
+  <data name="Region_full_msg" xml:space="preserve">
+    <value>Maximaal aantal Avatars + NPCs</value>
+  </data>
   <data name="Region_List" xml:space="preserve">
     <value>Region List</value>
   </data>
@@ -1726,10 +1777,13 @@
     <value>Region Ports</value>
   </data>
   <data name="Region_Port_Start" xml:space="preserve">
-    <value>Regio Port Start #</value>
+    <value>Region Port Start #</value>
   </data>
   <data name="Region_Port_word" xml:space="preserve">
     <value>Region Port</value>
+  </data>
+  <data name="Region_Removed" xml:space="preserve">
+    <value>Region is verwijderd</value>
   </data>
   <data name="Region_ServerName" xml:space="preserve">
     <value>De server om verbinding te maken. 'Localhost' is de standaard.</value>
@@ -1745,9 +1799,6 @@
   </data>
   <data name="Region_UUID_Is_invalid_word" xml:space="preserve">
     <value>Regio UUID is ongeldig</value>
-  </data>
-  <data name="Reion_Removed" xml:space="preserve">
-    <value>Region is verwijderd</value>
   </data>
   <data name="Reload" xml:space="preserve">
     <value>Herladen het rooster</value>
@@ -1794,14 +1845,17 @@
   <data name="Restart_on_Physics_Crash_Text" xml:space="preserve">
     <value>Bulletsim fysica crash zal een simulator herstart te forceren</value>
   </data>
+  <data name="Restart_Pending_word" xml:space="preserve">
+    <value>Restart In afwachting</value>
+  </data>
   <data name="Restart_Periodically_Minutes" xml:space="preserve">
     <value>De regio's zullen alle automatische herstart na zoveel minuten hardlopen</value>
   </data>
   <data name="Restart_Periodically_word" xml:space="preserve">
     <value>Restart periodiek</value>
   </data>
-  <data name="Restart_Queued_for_word" xml:space="preserve">
-    <value>Restart wachtrij voor</value>
+  <data name="Restart_Queued_word" xml:space="preserve">
+    <value>Restart wachtrij</value>
   </data>
   <data name="Restart_Region_word" xml:space="preserve">
     <value>Restart Region</value>
@@ -1833,6 +1887,9 @@
   <data name="Robust_failed_to_start" xml:space="preserve">
     <value>Robuuste kan niet worden gestart</value>
   </data>
+  <data name="Robust_not_Running" xml:space="preserve">
+    <value>Robuust is niet actief op deze machine</value>
+  </data>
   <data name="Robust_running" xml:space="preserve">
     <value>Robuuste LOOPT</value>
   </data>
@@ -1843,7 +1900,10 @@
     <value>Klik op een ingeschakelde rij te starten of te stoppen met de regio. Klik op een rij uitgeschakeld om de regio te bewerken.</value>
   </data>
   <data name="Running" xml:space="preserve">
-    <value>hardlopen</value>
+    <value>Rennen</value>
+  </data>
+  <data name="Running_as_a_Region_Server_word" xml:space="preserve">
+    <value>Uitgevoerd als een Region Server</value>
   </data>
   <data name="Running_Network" xml:space="preserve">
     <value>Running Network Diagnostics</value>
@@ -1908,6 +1968,9 @@
   <data name="Search_All_Grids_word" xml:space="preserve">
     <value>Zoeken Alles Grids</value>
   </data>
+  <data name="Search_Connect_failed" xml:space="preserve">
+    <value>Kan geen verbinding naar Zoeken Database</value>
+  </data>
   <data name="Search_word" xml:space="preserve">
     <value>Zoeken</value>
   </data>
@@ -1915,10 +1978,13 @@
     <value>Geheim</value>
   </data>
   <data name="SeeYouSoon" xml:space="preserve">
-    <value>Ik zie je weer als ik wakker word allemaal fris en nieuw!</value>
+    <value>Ik zal je weer te zien als ik wakker word allemaal fris en nieuw!</value>
   </data>
   <data name="See_Log" xml:space="preserve">
     <value>Wilt u het logbestand zien?</value>
+  </data>
+  <data name="See_Ports_In_Use_word" xml:space="preserve">
+    <value>Zie gebruikte poorten</value>
   </data>
   <data name="Selectallnone" xml:space="preserve">
     <value>Selecteert alle of geen van de selectievakjes</value>
@@ -1971,6 +2037,9 @@
   <data name="Setup_Voice_Service" xml:space="preserve">
     <value>Setup spraakdienst</value>
   </data>
+  <data name="Setup_word" xml:space="preserve">
+    <value>Opstelling</value>
+  </data>
   <data name="Set_Debug_Level_word" xml:space="preserve">
     <value>Set Debug Level</value>
   </data>
@@ -1993,10 +2062,10 @@
     <value>Toon User Data</value>
   </data>
   <data name="Show_word" xml:space="preserve">
-    <value>Tonen</value>
+    <value>Altijd Show Regio's</value>
   </data>
   <data name="Shutdown_word" xml:space="preserve">
-    <value>Stilgelegd</value>
+    <value>Afsluiten</value>
   </data>
   <data name="Simple_but_Fast_word" xml:space="preserve">
     <value>Eenvoudig maar snel</value>
@@ -2089,7 +2158,7 @@
     <value>Begin</value>
   </data>
   <data name="Status_word" xml:space="preserve">
-    <value>staat</value>
+    <value>Toestand</value>
   </data>
   <data name="STComment" xml:space="preserve">
     <value>Script timer snelheid. 1/11 seconde is standaard (0,0909)</value>
@@ -2310,6 +2379,9 @@
   <data name="Voice_Settings_Word" xml:space="preserve">
     <value>Voice-instellingen</value>
   </data>
+  <data name="Waiting_on_Robust" xml:space="preserve">
+    <value>Wachten op Robuuste om te beginnen</value>
+  </data>
   <data name="Waiting_text" xml:space="preserve">
     <value>Wachten op alle regio's om af te sluiten</value>
   </data>
@@ -2321,6 +2393,9 @@
   </data>
   <data name="WebServerPanel" xml:space="preserve">
     <value>Web Server Panel</value>
+  </data>
+  <data name="Web_Download_Link_Word" xml:space="preserve">
+    <value>Web Download Link</value>
   </data>
   <data name="Web_Port" xml:space="preserve">
     <value>Web-poort (80 of 8000)</value>
@@ -2351,5 +2426,14 @@
   </data>
   <data name="Wrong" xml:space="preserve">
     <value>Er is iets mis met het internet</value>
+  </data>
+  <data name="XEngine_word" xml:space="preserve">
+    <value>XEngine</value>
+  </data>
+  <data name="YEngine_word" xml:space="preserve">
+    <value>YEngine</value>
+  </data>
+  <data name="Yes_word" xml:space="preserve">
+    <value>Ja</value>
   </data>
 </root>
