--- a/Installer_Src/Setup DreamWorld/My Project/Resources.no.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.no.resx
@@ -121,7 +121,7 @@
     <value>Abortert</value>
   </data>
   <data name="About_word" xml:space="preserve">
-    <value>Handle om</value>
+    <value>Om</value>
   </data>
   <data name="Add_Region_word" xml:space="preserve">
     <value>Legg Region</value>
@@ -144,8 +144,8 @@
   <data name="AllNone_word" xml:space="preserve">
     <value>Alle / ingen</value>
   </data>
-  <data name="Allow200" xml:space="preserve">
-    <value>Tillat 200+ nivå guder</value>
+  <data name="AllowGodsTooltip" xml:space="preserve">
+    <value>Hvis denne boksen er krysset av i Innstillinger&gt; Tillatelser, så alle brukere med et nivå&gt; = 100 i Web panelet kan bli en Gud, hvor som helst. Dette kan være satt for enkelte regioner hvis standard i Tillatelser er FN-kontrollert, og du overstyre den i regionen panel med ** La Gods I denne regionen **. Denne innstillingen har ingenting å gjøre med de to andre innstillinger.</value>
   </data>
   <data name="Allow_cloud" xml:space="preserve">
     <value>De opprinnelige Second Life-skyer</value>
@@ -160,7 +160,7 @@
     <value>Objekter kan tas fra rutenettet via Hypergrid</value>
   </data>
   <data name="Allow_Or_Disallow_Gods_word" xml:space="preserve">
-    <value>Tillate eller nekte Gods</value>
+    <value>Tillat Level-baserte guder</value>
   </data>
   <data name="Allow_Region_Owner_Gods_word" xml:space="preserve">
     <value>Tillat Region eier guder</value>
@@ -358,7 +358,7 @@
     <value>Kule</value>
   </data>
   <data name="Busy_word" xml:space="preserve">
-    <value>Opptatt</value>
+    <value>Travel</value>
   </data>
   <data name="Caches_word" xml:space="preserve">
     <value>Caches</value>
@@ -384,14 +384,14 @@
   <data name="Cancel_word" xml:space="preserve">
     <value>Avbryt</value>
   </data>
-  <data name="Cannot locate folder_word" xml:space="preserve">
-    <value>Finner ikke mappen</value>
-  </data>
   <data name="Cannot_find_region_word" xml:space="preserve">
     <value>Kan ikke finne region</value>
   </data>
   <data name="Cannot_locate" xml:space="preserve">
     <value>Finner ikke standard velkommen region</value>
+  </data>
+  <data name="Cannot_locate_folder_word" xml:space="preserve">
+    <value>Finner ikke mappen</value>
   </data>
   <data name="Cannot_Normalize" xml:space="preserve">
     <value>Kan ikke normalisere kart som en region vil være på et sted mindre enn 0</value>
@@ -402,11 +402,14 @@
   <data name="Cannot_save_region_word" xml:space="preserve">
     <value>Kan ikke lagre region:</value>
   </data>
+  <data name="Category_word" xml:space="preserve">
+    <value>Kategori</value>
+  </data>
   <data name="CenterMap" xml:space="preserve">
     <value>Midt på kartet koordinere</value>
   </data>
   <data name="Changes_Made" xml:space="preserve">
-    <value>Endringer er gjort. Lagre?</value>
+    <value>Endringer er blitt gjort. Lagre?</value>
   </data>
   <data name="Change_Password_word" xml:space="preserve">
     <value>Bytt passord</value>
@@ -449,6 +452,9 @@
   </data>
   <data name="Choose_Cache" xml:space="preserve">
     <value>Velg hvilken cache for å tømme</value>
+  </data>
+  <data name="Choose_folder_for_backups" xml:space="preserve">
+    <value>Velg en mappe for å lagre sikkerhetskopier</value>
   </data>
   <data name="Choose_Region_word" xml:space="preserve">
     <value>Velg region</value>
@@ -563,6 +569,9 @@
   </data>
   <data name="Click_to_load" xml:space="preserve">
     <value>Klikk for å laste dette innholdet</value>
+  </data>
+  <data name="Click_To_Load_Here" xml:space="preserve">
+    <value>Klikk for å laste nedre venstre hjørne av filen til denne plasseringen.</value>
   </data>
   <data name="Click_to_Request_Voice_Service" xml:space="preserve">
     <value>Klikk for å be om Voice-tjenesten</value>
@@ -702,6 +711,9 @@
   <data name="Deregister_word" xml:space="preserve">
     <value>avregistrere</value>
   </data>
+  <data name="Description_word" xml:space="preserve">
+    <value>Beskrivelse</value>
+  </data>
   <data name="Details_word" xml:space="preserve">
     <value>detaljer</value>
   </data>
@@ -756,6 +768,9 @@
   <data name="DNS_HG_Name" xml:space="preserve">
     <value>DNS Name &amp; Hypergrid</value>
   </data>
+  <data name="DosBoxRunning" xml:space="preserve">
+    <value>En DOS Box heter Robust allerede kjører</value>
+  </data>
   <data name="DOS_Box_word" xml:space="preserve">
     <value>DOS Box</value>
   </data>
@@ -772,9 +787,12 @@
     <value>DreamGrid</value>
   </data>
   <data name="Dynamic_DNS_word" xml:space="preserve">
-    <value>Dynamisk DNSRegistering DynDNS adresse</value>
+    <value>dynamisk DNS</value>
   </data>
   <data name="DynDNS" xml:space="preserve">
+    <value>Registrere DynDNS adresse</value>
+  </data>
+  <data name="DynDNS_password_word" xml:space="preserve">
     <value>DynDNS passord</value>
   </data>
   <data name="EditRegion" xml:space="preserve">
@@ -808,7 +826,7 @@
     <value>aktiver søk</value>
   </data>
   <data name="Enable_word" xml:space="preserve">
-    <value>Aktiver</value>
+    <value>Muliggjøre</value>
   </data>
   <data name="EnterName" xml:space="preserve">
     <value>Skriv inn et navn for sikkerhetskopi</value>
@@ -829,7 +847,7 @@
     <value>0 - (ERROR) feil bare</value>
   </data>
   <data name="ErrorLevel1" xml:space="preserve">
-    <value>1 - (Info) hit rate statistikk</value>
+    <value>1 - (info) hit rate statistikk</value>
   </data>
   <data name="ErrorLevel2" xml:space="preserve">
     <value>2 - (feilsøking) Buffer Aktivitet</value>
@@ -1033,7 +1051,10 @@
     <value>Hypergrid skal jobbe.</value>
   </data>
   <data name="Hide" xml:space="preserve">
-    <value>Gjemme seg</value>
+    <value>Skjul Regioner Når du er ferdig</value>
+  </data>
+  <data name="Hide_Allways_word" xml:space="preserve">
+    <value>Alltid Skjul Regioner</value>
   </data>
   <data name="Highest_Used" xml:space="preserve">
     <value>Høyeste brukt: 8004</value>
@@ -1197,9 +1218,6 @@
   <data name="ListAvatars" xml:space="preserve">
     <value>Vis liste over avatarer</value>
   </data>
-  <data name="Load Parcel" xml:space="preserve">
-    <value>laste Parcel</value>
-  </data>
   <data name="Loading_Settings" xml:space="preserve">
     <value>Laster settings.ini</value>
   </data>
@@ -1212,6 +1230,12 @@
   <data name="Load_Free_Avatar_Inventory_text" xml:space="preserve">
     <value>Laste IRR fra Outworldz nettsiden</value>
   </data>
+  <data name="Load_Free_Avatar_Inventory_word" xml:space="preserve">
+    <value>Load Free Avatar Inventory (www)</value>
+  </data>
+  <data name="Load_Free_DreamGrid_OARs_word" xml:space="preserve">
+    <value>Laste Gratis DreamGrid årer (www)</value>
+  </data>
   <data name="Load_Free_Dreamworld_OARs" xml:space="preserve">
     <value>Laste Gratis Dreamworld Årer</value>
   </data>
@@ -1221,8 +1245,17 @@
   <data name="Load_Local_IARs" xml:space="preserve">
     <value>Laste Lokale IRR fra IAR mappen</value>
   </data>
+  <data name="Load_Local_IARs_word" xml:space="preserve">
+    <value>Laste Lokale IRR</value>
+  </data>
   <data name="Load_Local_OARs" xml:space="preserve">
     <value>Laste Lokale årer fra OAR mappen</value>
+  </data>
+  <data name="Load_Local_OARs_word" xml:space="preserve">
+    <value>Laste Lokale Årer</value>
+  </data>
+  <data name="Load_Parcel" xml:space="preserve">
+    <value>laste Parcel</value>
   </data>
   <data name="Load_Region_OAR" xml:space="preserve">
     <value>Laste Region OAR</value>
@@ -1263,11 +1296,11 @@
   <data name="Make_a_backup_word" xml:space="preserve">
     <value>Lag en backup?</value>
   </data>
-  <data name="Manager God_word" xml:space="preserve">
+  <data name="Manager_God_word" xml:space="preserve">
     <value>Manager_God</value>
   </data>
   <data name="Maps_Erased" xml:space="preserve">
-    <value>Alle kart fliser har blitt slettet. Sett kartet innstillingen og omstart for å lage nye kart</value>
+    <value>Alle kartseksjoner er slettet. Sett kartet innstillingen og omstart for å lage nye kart</value>
   </data>
   <data name="Maps_word" xml:space="preserve">
     <value>Maps</value>
@@ -1341,6 +1374,9 @@
   <data name="More_Free_Islands" xml:space="preserve">
     <value>Mer gratis Øyene og deler</value>
   </data>
+  <data name="More_Free_Islands_and_Parts_word" xml:space="preserve">
+    <value>Flere Gratis Øyene og deler (www)</value>
+  </data>
   <data name="More_Help" xml:space="preserve">
     <value>Klikk for mer hjelp på nettsiden</value>
   </data>
@@ -1384,7 +1420,10 @@
     <value>Navn</value>
   </data>
   <data name="NameAlreadySet" xml:space="preserve">
-    <value>System navn er satt til {newname}. Du kan endre navnet på DNS ​​menyen når som helst</value>
+    <value>System Hypergrid navn har blitt tilbakestilt. Du kan endre navnet på Setup-Innstillinger-&gt; DNS-menyen</value>
+  </data>
+  <data name="Name_of_Region_Word" xml:space="preserve">
+    <value>Navn Region</value>
   </data>
   <data name="Neighbor_Distance" xml:space="preserve">
     <value>Nabo Avstand (standard = 25,0)</value>
@@ -1429,7 +1468,7 @@
     <value>Normaliser Regioner</value>
   </data>
   <data name="Normally_Set" xml:space="preserve">
-    <value>Normalt settes til OutworldzFiles / Auto mappe med 'Auto'. Klikk for å endre mappen.</value>
+    <value>Normalt settes til OutworldzFiles / Auto mappe med 'Autobackup'. Klikk for å endre mappen.</value>
   </data>
   <data name="Normal_Prim" xml:space="preserve">
     <value>Du kan ikke lage en vanlig prim større enn dette.</value>
@@ -1494,7 +1533,13 @@
   <data name="OAR_Load_and_Save" xml:space="preserve">
     <value>OAR Last inn og lagre</value>
   </data>
+  <data name="OAR_load_save_backupp_word" xml:space="preserve">
+    <value>OAR Load, Save and Backup</value>
+  </data>
   <data name="Object_Path" xml:space="preserve">
+    <value>Objekt Bane og navn</value>
+  </data>
+  <data name="Object_Path_and_name" xml:space="preserve">
     <value>Objekt Bane og navn</value>
   </data>
   <data name="ODE_text" xml:space="preserve">
@@ -1548,11 +1593,11 @@
   <data name="Passed_LAN" xml:space="preserve">
     <value>Bestått LAN Loopback Test</value>
   </data>
-  <data name="Password" xml:space="preserve">
-    <value>Passord</value>
-  </data>
   <data name="Password_Text" xml:space="preserve">
     <value>Du kan bare endre passordet når OpenSim er løping</value>
+  </data>
+  <data name="Password_word" xml:space="preserve">
+    <value>Passord</value>
   </data>
   <data name="PDF_Manual_word" xml:space="preserve">
     <value>PDF Manual</value>
@@ -1562,6 +1607,9 @@
   </data>
   <data name="Permissions_word" xml:space="preserve">
     <value>tillatelser</value>
+  </data>
+  <data name="Photo_Word" xml:space="preserve">
+    <value>Bilde</value>
   </data>
   <data name="Physical_Prim" xml:space="preserve">
     <value>Fysisk Prim Max Size</value>
@@ -1698,6 +1746,9 @@
   <data name="Region_Database" xml:space="preserve">
     <value>Region Database</value>
   </data>
+  <data name="Region_full_msg" xml:space="preserve">
+    <value>Maks antall avatarer + NPCer</value>
+  </data>
   <data name="Region_List" xml:space="preserve">
     <value>Liste</value>
   </data>
@@ -1731,6 +1782,9 @@
   <data name="Region_Port_word" xml:space="preserve">
     <value>Region Port</value>
   </data>
+  <data name="Region_Removed" xml:space="preserve">
+    <value>Regionen har blitt fjernet</value>
+  </data>
   <data name="Region_ServerName" xml:space="preserve">
     <value>Serveren skal kobles til. 'Localhost' er standard.</value>
   </data>
@@ -1745,9 +1799,6 @@
   </data>
   <data name="Region_UUID_Is_invalid_word" xml:space="preserve">
     <value>Region UUID er ugyldig</value>
-  </data>
-  <data name="Reion_Removed" xml:space="preserve">
-    <value>Regionen har blitt fjernet</value>
   </data>
   <data name="Reload" xml:space="preserve">
     <value>Last gitteret</value>
@@ -1794,14 +1845,17 @@
   <data name="Restart_on_Physics_Crash_Text" xml:space="preserve">
     <value>Bulletsim fysikk krasj vil tvinge en simulator omstart</value>
   </data>
+  <data name="Restart_Pending_word" xml:space="preserve">
+    <value>Restart Pending</value>
+  </data>
   <data name="Restart_Periodically_Minutes" xml:space="preserve">
     <value>Regionene vil alle automatisk omstart etter så mange minutter å kjøre</value>
   </data>
   <data name="Restart_Periodically_word" xml:space="preserve">
     <value>Restart med jevne mellomrom</value>
   </data>
-  <data name="Restart_Queued_for_word" xml:space="preserve">
-    <value>Restart I kø for</value>
+  <data name="Restart_Queued_word" xml:space="preserve">
+    <value>Restart kø</value>
   </data>
   <data name="Restart_Region_word" xml:space="preserve">
     <value>Restart Region</value>
@@ -1833,6 +1887,9 @@
   <data name="Robust_failed_to_start" xml:space="preserve">
     <value>Robust startet ikke</value>
   </data>
+  <data name="Robust_not_Running" xml:space="preserve">
+    <value>Robust kjører ikke på denne maskinen</value>
+  </data>
   <data name="Robust_running" xml:space="preserve">
     <value>Robuste kjører</value>
   </data>
@@ -1844,6 +1901,9 @@
   </data>
   <data name="Running" xml:space="preserve">
     <value>Løping</value>
+  </data>
+  <data name="Running_as_a_Region_Server_word" xml:space="preserve">
+    <value>Kjører som en region Server</value>
   </data>
   <data name="Running_Network" xml:space="preserve">
     <value>Kjører Nettverksdiagnostikk</value>
@@ -1908,8 +1968,11 @@
   <data name="Search_All_Grids_word" xml:space="preserve">
     <value>Søk Alle Rister</value>
   </data>
+  <data name="Search_Connect_failed" xml:space="preserve">
+    <value>Kunne ikke koble til søkedatabasen</value>
+  </data>
   <data name="Search_word" xml:space="preserve">
-    <value>Søke</value>
+    <value>Søk</value>
   </data>
   <data name="Secret_word" xml:space="preserve">
     <value>Hemmelig</value>
@@ -1919,6 +1982,9 @@
   </data>
   <data name="See_Log" xml:space="preserve">
     <value>Ønsker du å se loggfilen?</value>
+  </data>
+  <data name="See_Ports_In_Use_word" xml:space="preserve">
+    <value>Se havner i bruk</value>
   </data>
   <data name="Selectallnone" xml:space="preserve">
     <value>Velger alle eller ingen av boksene</value>
@@ -1971,6 +2037,9 @@
   <data name="Setup_Voice_Service" xml:space="preserve">
     <value>Oppsett Voice-tjenesten</value>
   </data>
+  <data name="Setup_word" xml:space="preserve">
+    <value>Setup</value>
+  </data>
   <data name="Set_Debug_Level_word" xml:space="preserve">
     <value>Set Debug nivå</value>
   </data>
@@ -1993,7 +2062,7 @@
     <value>Vis Bruker Data</value>
   </data>
   <data name="Show_word" xml:space="preserve">
-    <value>Vise fram</value>
+    <value>Alltid Vis Regioner</value>
   </data>
   <data name="Shutdown_word" xml:space="preserve">
     <value>Skru av</value>
@@ -2224,7 +2293,7 @@
     <value>Oppdateringen er lastet ned. Installere det nå?</value>
   </data>
   <data name="Update_is_available" xml:space="preserve">
-    <value>Oppdatering er tilgjengelig. Nedlasting oppdatering i bakgrunnen. Vennligst la den ferdig.</value>
+    <value>Oppdatering er tilgjengelig. Laster ned oppdatering i bakgrunnen. Vennligst la den ferdig.</value>
   </data>
   <data name="Updating_Ports_word" xml:space="preserve">
     <value>oppdatering Ports</value>
@@ -2310,6 +2379,9 @@
   <data name="Voice_Settings_Word" xml:space="preserve">
     <value>stemme~~POS=TRUNC innstillinger~~POS=HEADCOMP</value>
   </data>
+  <data name="Waiting_on_Robust" xml:space="preserve">
+    <value>Venter på Robust å starte</value>
+  </data>
   <data name="Waiting_text" xml:space="preserve">
     <value>Venter på at alle regioner til exit</value>
   </data>
@@ -2321,6 +2393,9 @@
   </data>
   <data name="WebServerPanel" xml:space="preserve">
     <value>Web Server Panel</value>
+  </data>
+  <data name="Web_Download_Link_Word" xml:space="preserve">
+    <value>Web Download Link</value>
   </data>
   <data name="Web_Port" xml:space="preserve">
     <value>Web Port (80 eller 8000)</value>
@@ -2351,5 +2426,14 @@
   </data>
   <data name="Wrong" xml:space="preserve">
     <value>Noe er galt med Internett</value>
+  </data>
+  <data name="XEngine_word" xml:space="preserve">
+    <value>XEngine</value>
+  </data>
+  <data name="YEngine_word" xml:space="preserve">
+    <value>YEngine</value>
+  </data>
+  <data name="Yes_word" xml:space="preserve">
+    <value>Ja</value>
   </data>
 </root>
